--- a/product/数据库/云存储Redis/操作指南/网络与安全/配置安全组.md
+++ b/product/数据库/云存储Redis/操作指南/网络与安全/配置安全组.md
@@ -21,9 +21,7 @@
    - **高级配置**：给安全组添加标签。
 4. 如果**模板**为**自定义**，在**提醒**对话框，单击**立即设置规则**，执行以下步骤。
 
-### [步骤二：设置安全组规则](id:Step2)
-
-#### 入站规则
+### [步骤二：设置安全组入站规则](id:Step2)
 
 1. 在**安全组规则**页面，选择**入站规则**页签， 单击 **添加规则**。
 2. 在弹出**添加入站规则**的对话框中，设置规则。
@@ -49,18 +47,6 @@
     - **备注**：自定义，简短地描述规则，便于后期管理。
 4. 单击**完成**，完成安全组入站规则的添加。
    
-#### 出站规则
-
-1. 在**安全组规则**页面，选择**出站规则**页签， 单击 **添加规则**。
-2. 在弹出**添加出站规则**的对话框中，设置规则。
-   - **类型**：请选择默认类型**自定义**。
-   - **目标**：流出云数据库Redis的目标IP信息。支持格式与**入站规则**的**来源**格式相同。
-   - **协议端口**：填写出站的协议类型和端口。您可在 [实例详情](https://console.cloud.tencent.com/redis) 页面的**网络信息**区域的**内网IPv4地址**中查看端口信息，默认为6379。访问协议为 TCP，则可设置为 TCP:6379。
-    - **策略**：默认选择**允许**。
-      - **允许**：放行该端口相应的访问请求。
-      - **拒绝**：直接丢弃数据包，不返回任何回应信息。
-    - **备注**：自定义，简短地描述规则，便于后期管理。
-4. 单击**完成**，完成安全组出站规则的添加。
 
 ### 步骤三：给数据库实例绑定安全组
 
