--- a/product/安全服务/网站管家/产品动态.md
+++ b/product/安全服务/网站管家/产品动态.md
@@ -1,3 +1,27 @@
+## 2022-04
+<table>
+<tr><th width=20%>动态名称</th><th width=48%>动态描述</th><th width=12%>发布时间</th><th width=20%>相关文档</th></tr>
+<tbody><tr>
+<td>日志投递服务</td>
+<td>日志投递功能用于将日志数据投递到 CLS（ 日志服务）、CKafka（消息队列），助力挖掘日志数据价值，满足用户日志运维诉求。
+</td>
+<td>2021-04-10</td>
+<td><a href="https://cloud.tencent.com/document/product/627/70276">IP 日志投递</td></tr>
+</tbody></table>
+
+
+## 2022-03
+<table>
+<tr><th width=20%>动态名称</th><th width=48%>动态描述</th><th width=12%>发布时间</th><th width=20%>相关文档</th></tr>
+<tbody><tr>
+<td>IP 封禁能力增强</td>
+<td>当前 IP 封禁支持域名级区分封禁，不同域名检测时长不同，封禁时间也单独计算。</td>
+<td>2021-03-02</td>
+<td><a href="https://cloud.tencent.com/document/product/627/64332">IP 封禁惩罚</td></tr>
+</tbody></table>
+
+
+
 ## 2021-11
 <table>
 <tr><th width=20%>动态名称</th><th width=48%>动态描述</th><th width=12%>发布时间</th><th width=20%>相关文档</th></tr>
