--- a/product/数据库/云存储Redis/操作指南/网络与安全/配置安全组.md
+++ b/product/数据库/云存储Redis/操作指南/网络与安全/配置安全组.md
@@ -66,7 +66,8 @@
      - **安全组名称**：显示安全组的名称，便于识别安全组放通的信息。
      - **操作**：单击列表上方的**编辑**， 单击![img](https://qcloudimg.tencent-cloud.cn/raw/b407f850a15a1362a1ac89a4b13ce955.png)或者![img](https://qcloudimg.tencent-cloud.cn/raw/3efb762c31ec14fa16813748183eb520.png)，可调整安全组放通的优先级。 单击<img src="https://qcloudimg.tencent-cloud.cn/raw/ef650a132e219e69f4792ce463e69fe0.png" style="zoom: 67%;" />，可删除已绑定的安全组。
      ![](https://qcloudimg.tencent-cloud.cn/raw/65ed391b636db5e291788e3ded62444f.png)
-   - 在**规则预览**区域，在**入站规则**页签可查看安全组的入站来源信息；在**出站规则**页签，可查看数据库的出站目标信息。
+   - 在**规则预览**区域，在**入站规则**页签可查看安全组的入站来源信息。
+![](https://qcloudimg.tencent-cloud.cn/raw/5aa33af7522d3ec444a337af28c11c20.png)
 
 ## 更多操作
 
