--- a/product/企业协同/腾讯会议/API 文档/REST APIs/企业云录制管理/查询录制文件访问数据.md
+++ b/product/企业协同/腾讯会议/API 文档/REST APIs/企业云录制管理/查询录制文件访问数据.md
@@ -1,5 +1,5 @@
 ## 接口描述
-- **描述：**查询会议录制 ID 对应的访问数据，按照天纬度返回，支持 OAuth2.0 鉴权调用。
+- **描述：**查询会议录制 ID 对应的访问数据，按照天维度返回，支持 OAuth2.0 鉴权调用。
 - **所需权限点为：**查看会议录制（VIEW_VIDEO） 或 管理会议录制（MANAGE_VIDEO）。
 - **接口请求方法：**GET
 - **接口请求域名：**
