--- a/product/数据库/云存储Redis/操作指南/网络与安全/配置外网地址.md
+++ b/product/数据库/云存储Redis/操作指南/网络与安全/配置外网地址.md
@@ -3,6 +3,7 @@
 >?
 >- 外网访问出现的故障，不会计入 Redis 服务的整体可用性计算。
 >- 云数据库 Redis 外网访问会降低实例的安全性，仅推荐用于管理、测试或辅助管理数据库，不提供可用性 SLA 保证，业务访问请使用内网访问。
+>- 外网访问开通后将受到安全组网络访问策略的控制，请在安全组入站规则中配置访问数据库的来源信息，并放通协议端口。具体操作，请参见 [Redis 安全组配置](https://cloud.tencent.com/document/product/239/30911)。
 
 ## 注意事项
 1. 启用后，您可以使用系统分配的域名和端口通过外网访问腾讯云数据库 Redis，生效时间大概需要5分钟。
@@ -33,4 +34,11 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/0e50beda91961ca6d49fe0125cea0e29.png)
 3. 在弹出的对话框，确认无误后，单击**确定**。
 4. 返回实例详情页，实例状态变为**外网关闭中**，**外网地址**处不再显示外网地址，外网功能即关闭。
+
+## 相关 API
+
+| API接口 | 说明 | 
+|---------|---------|
+| [AllocateWanAddress](https://cloud.tencent.com/document/product/239/72839) | 开通外网接口 | 
+| [ReleaseWanAddress](https://cloud.tencent.com/document/product/239/72838) | 关闭外网接口 | 
 
