--- a/product/数据库/云存储Redis/操作指南/网络与安全/配置外网地址.md
+++ b/product/数据库/云存储Redis/操作指南/网络与安全/配置外网地址.md
@@ -8,9 +8,8 @@
 ## 注意事项
 1. 启用后，您可以使用系统分配的域名和端口通过外网访问腾讯云数据库 Redis，生效时间大概需要5分钟。
 2. 外网访问仅用于开发或辅助管理数据库，业务访问请使用内网访问。
-3. 外网访问开通后将受到安全组网络访问策略的控制，请放通内网端口，具体操作，请参见 [Redis 安全组配置](https://cloud.tencent.com/document/product/239/30911)。
+3. 外网访问开通后将受到安全组网络访问策略的控制，请在安全组入站规则中配置访问数据库的来源信息，并放通协议端口。具体操作，请参见 [Redis 安全组配置](https://cloud.tencent.com/document/product/239/30911)。
 4. 外网访问的出现故障，不会计入 Redis 服务的整体可用性计算。
-5. 外网访问开通后将受到安全组网络访问策略的控制，请在安全组入站规则中配置访问数据库的来源信息，并放通协议端口。具体操作，请参见 [Redis 安全组配置](https://cloud.tencent.com/document/product/239/30911)。
 
 ## 前提条件
 - 仅支持私有网络 VPC 的实例开通外网地址功能。
@@ -25,7 +24,7 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/1063b311e62c553044bc1b043489f8d8.png)
 4. 返回实例详情页，实例状态变为**开通外网中**，表示实例正在开启外网地址。若实例状态长时间不改变，请重新刷新网页。
 5. 当**外网地址**处显示包含域名和端口的外网地址，表明成功开启外网地址，使用外网可正常访问 Redis 数据库。
->?云数据库 Redis 外网访问开通后将受到安全组网络访问策略的控制，具体详见 [配置安全组](https://cloud.tencent.com/document/product/239/30911)。
+>!外网访问开通后将受到安全组网络访问策略的控制，请在安全组入站规则中配置访问数据库的来源信息，并放通协议端口。具体操作，请参见 [Redis 安全组配置](https://cloud.tencent.com/document/product/239/30911)。
 >
 ![](https://qcloudimg.tencent-cloud.cn/raw/6198b8552cca94d79be7aae9b54fe310.png)
 
