--- a/product/数据库/云数据库 CynosDB/购买指南/变配说明.md
+++ b/product/数据库/云数据库 CynosDB/购买指南/变配说明.md
@@ -1,7 +1,7 @@
 本文分别从计算节点和存储空间两部分为您介绍按量计费集群和包年包月集群变更配置的费用说明。
 >?
 >- TDSQL-C MySQL 版采用存储与计算分离的架构，可独立进行配置变更，无需组合变更，提高了配置变更的灵活性。
->- 集群下的实例升配时，存储空间具有上限，存储空间不能超过计算节点对应的的最大存储上限，如需更大的存储空间，您可先升级当前计算节点规格，详细计算节点规格与存储空间上限您可参考 [产品规格](https://cloud.tencent.com/document/product/1003/71887)。
+>- 集群下的实例升配时，存储空间具有上限，存储空间不能超过计算节点对应的最大存储上限，如需更大的存储空间，您可先升级当前计算节点规格，详细计算节点规格与存储空间上限您可参考 [产品规格](https://cloud.tencent.com/document/product/1003/71887)。
 
 ## 计算节点变更配置说明
 >?
