--- a/product/计算与网络/轻量应用服务器/操作指南/管理镜像/轻量应用服务器镜像问题与说明.md
+++ b/product/计算与网络/轻量应用服务器/操作指南/管理镜像/轻量应用服务器镜像问题与说明.md
@@ -17,7 +17,7 @@
 <th>备注</th>
 </tr>
 <tr>
-<td>宝塔 Linux 面板腾讯云专项版</td>
+<td>宝塔 Linux 面板腾讯云专享版</td>
 <td rowspan=12>用户创建该镜像的 Lighthouse 服务器后，服务器可以正常运行，操作系统可正常进入。</td>
 <td rowspan=12>第三方教程均来自 <a href="https://cloud.tencent.com/developer">云+社区</a> 及 <a href="https://computeinit.com/">腾讯云服务器官方技术社区</a>，仅供学习和参考。</td>
 <td>
@@ -29,15 +29,15 @@
 </td>
 </tr>
 <tr>
-<td>Discuz Q!</td>
+<td>Discuz! Q</td>
 <td>-</td>
 </tr>
 <tr>
-<td>Wordpresss</td>
+<td>WordPress </td>
 <td>-</td>
 </tr>
 <tr>
-<td>Typecho</td>
+<td>Typecho </td>
 <td>-</td>
 </tr>
 <tr>
@@ -57,7 +57,7 @@
 <td>-</td>
 </tr>
 <tr>
-<td>Thela IDE 1.12.1</td>
+<td>Theia IDE</td>
 <td>-</td>
 </tr>
 <tr>
@@ -69,7 +69,7 @@
 <td>-</td>
 </tr>
 <tr>
-<td>宝塔 windows 面板腾讯云专项版</td>
+<td>宝塔 windows 面板腾讯云专享版</td>
 <td>
 <ul style="margin-bottom:0px">
 <li>宝塔使用手册 <a href="https://www.kancloud.cn/wzznb/btpanel/2112816">Windows 服务器</a></li>
