--- a/product/计算与网络/轻量应用服务器/操作指南/管理镜像/轻量应用服务器镜像问题与说明.md
+++ b/product/计算与网络/轻量应用服务器/操作指南/管理镜像/轻量应用服务器镜像问题与说明.md
@@ -69,7 +69,7 @@
 <td>-</td>
 </tr>
 <tr>
-<td>宝塔 windows 面板腾讯云专享版</td>
+<td>宝塔 Windows 面板腾讯云专享版</td>
 <td>
 <ul style="margin-bottom:0px">
 <li>宝塔使用手册 <a href="https://www.kancloud.cn/wzznb/btpanel/2112816">Windows 服务器</a></li>
