--- a/product/计算与网络/轻量应用服务器/操作指南/管理镜像/轻量应用服务器镜像问题与说明.md
+++ b/product/计算与网络/轻量应用服务器/操作指南/管理镜像/轻量应用服务器镜像问题与说明.md
@@ -12,13 +12,20 @@
 <table>
 <tr>
 <th>应用镜像名称</th>
-<th>支持范围</th>
+<th>腾讯云保障范围</th>
 <th>第三方教程</th>
 <th>备注</th>
 </tr>
 <tr>
 <td>宝塔 Linux 面板腾讯云专享版</td>
-<td rowspan=12>用户创建该镜像的 Lighthouse 服务器后，服务器可以正常运行，操作系统可正常进入。</td>
+<td rowspan=12>
+用户创建使用该应用镜像的轻量应用服务器后，腾讯云将会提供以下保障：
+<ul style="margin-bottom:0px">
+<li>服务器实例可以正常启动并进入“运行中”状态。</li>
+<li>操作系统可以正常启动并运行。</li>
+<li>应用镜像中预装的第三方应用软件、应用依赖的运行环境可正常启动并运行，预置的初始化配置文件可正常加载。</li>
+</ul>
+</td>
 <td rowspan=12>第三方教程均来自 <a href="https://cloud.tencent.com/developer">云+社区</a> 及 <a href="https://computeinit.com/">腾讯云服务器官方技术社区</a>，仅供学习和参考。</td>
 <td>
 <ul style="margin-bottom:0px">
