--- a/product/移动与通信/即时通信/产品动态.md
+++ b/product/移动与通信/即时通信/产品动态.md
@@ -5,7 +5,7 @@
 <tr>
     <td> SDK 2.18.1 版本发布（小程序和 Web 端）</td>
     <td><ul style="margin:0">
-<li>优化直播群使用体验</li><li>修复部分场景下统计不准确的问题。<li> 更多更新内容请参考 <a href="https://cloud.tencent.com/document/product/269/38492">更新日志</a></li>
+<li>优化直播群使用体验</li><li>修复部分场景下统计不准确的问题<li> 更多更新内容请参考 <a href="https://cloud.tencent.com/document/product/269/38492">更新日志</a></li>
     </ul></td>
     <td> 2022-04-22 </td>
     <td> <a href="https://cloud.tencent.com/document/product/269/36887#web">Web SDK下载</a></td>
