--- a/product/计算与网络/容器服务/常见问题/集群常见问题.md
+++ b/product/计算与网络/容器服务/常见问题/集群常见问题.md
@@ -66,8 +66,8 @@ TKE 容器服务器不支持将您现在的集群进行导出。
 
 1. 登录 [容器服务控制台](https://console.cloud.tencent.com/tke2/cluster?rid=4)，选择左侧导航栏中的**集群**，进入集群管理界面。
 2. 单击需要连接的集群 ID/名称，进入集群详情页。
-3. 选择左侧导航栏中的**基本信息**，即可在“基本信息”页面中查看“集群 APIServer 信息”模块中该集群的访问地址、外网/内网访问状态、Kubeconfig 访问凭证内容等信息。如下图所示：
-![image.png](https://img-cdn.wezhuiyi.com/yibot/456786921/images/z46xan37m7palic76285.png)
+3. 选择左侧导航栏中的**基本信息**，即可在“基本信息”页面中查看“集群 APIServer 信息”模块中该集群的访问地址、外网/内网访问状态、Kubeconfig 访问凭证内容等信息。
+
 
 
 ### 容器服务怎么才能添加其他账号名下的服务器到集群？	
