--- a/product/安全服务/二进制软件成分分析/购买指南.md
+++ b/product/安全服务/二进制软件成分分析/购买指南.md
@@ -14,4 +14,4 @@
 
 ## 退费说明
 - SaaS 版：当前腾讯云二进制软件成分分析服务不支持通过控制台退费，如果您需要退费，请 [联系我们](https://cloud.tencent.com/online-service?from=connect-us)，腾讯云后台客服为您处理，并按照如下退费规则进行退费：退费金额 = 实际支付金额 ×（1-已使用流量/流量包流量）。
-- 私有化版：腾讯云二进制软件成分分析服务企业版不支持退费，不适用五天无理由退款。
+- 私有化版：腾讯云二进制软件成分分析服务私有化版不支持退费，不适用五天无理由退款。
