--- a/product/安全服务/二进制软件成分分析/购买指南.md
+++ b/product/安全服务/二进制软件成分分析/购买指南.md
@@ -5,7 +5,7 @@
 
 ## 购买方式
 - SaaS 版：进入 [二进制软件成分分析购买页](https://buy.cloud.tencent.com/bsca) ，选择 SaaS 版和流量数量，单击**立即支付**，即可完成购买标准版服务。
-- 私有化版：二进制软件成分分析服务企业版支持私有化部署，如有私有化部署购买需求，请 [联系我们](https://cloud.tencent.com/online-service?from=connect-us) 获得产品更多详情。
+- 私有化版：二进制软件成分分析服支持私有化部署，如有私有化部署购买需求，请 [联系我们](https://cloud.tencent.com/online-service?from=connect-us) 获得产品更多详情。
 
 ## 欠费说明
 腾讯云二进制软件成分分析服务不支持欠费。
