--- a/product/计算与网络/容器服务/控制台指南（新版）/云原生 etcd/账号授权.md
+++ b/product/计算与网络/容器服务/控制台指南（新版）/云原生 etcd/账号授权.md
@@ -1,7 +1,12 @@
 ## 账号授权
-为便于业务进行更细粒度的权限控制，云原生ETCD将于2022-05-05开始接入CAM，接入CAM之后未被授权的子用户将无法正常方案etcd控制台。因此管理员需要为存量子用户授权，以便于用户能正常使用etcd服务。
-#### 管理员为子用户授权
-TCM已在CAM中内置了QcloudCEtcdFullAccess、QcloudCEtcdReadOnlyaccess两个预设策略，用户完全访问和只读访问两种场景，管理员可以在访问管理->用户->用户列表页面，点击对应子账号的授权按钮，并为该子账号设置对于的策略：
-![](https://qcloudimg.tencent-cloud.cn/raw/a2ac6c921ee403abc3f41ab0c9dcd4c2.png)
+为便于业务进行更细粒度的权限控制，云原生 ETCD 将于2022年5月5日接入 [访问管理 CAM](https://cloud.tencent.com/document/product/598)，接入 CAM 之后未被授权的子用户将无法正常使用 ETCD 控制台。云原生 ETCD 已在 CAM 中内置了 QcloudCEtcdFullAccess、QcloudCEtcdReadOnlyaccess 两个预设策略，用户完全访问和只读访问两种场景。若子用户需要使用 ETCD 服务，请联系拥有管理员权限的主账号为子用户授权，以便于用户能正常使用 ETCD 服务。
 
-完成授权后，子账号将可以正常访问etcd服务，管理员也可以通过创建自定义策略，为用户设置更精细的权限管控。
+## 操作步骤
+### 为子用户授权
+1. 登录 [访问管理控制台](https://console.cloud.tencent.com/cam)，选择左侧导航中的**用户 > 用户列表**。
+2. 在用户列表页中，选择子用户名称右侧的**授权**。
+3. 在“关联策略”弹窗中选择以下策略：
+	- QcloudCEtcdFullAccess
+	- QcloudCEtcdReadOnlyaccess
+![](https://qcloudimg.tencent-cloud.cn/raw/a2ac6c921ee403abc3f41ab0c9dcd4c2.png)
+4. 单击**确定**。完成授权后，子账号将可以正常访问 ETCD 服务，管理员也可以通过创建自定义策略，为用户设置更精细的权限管控。
