--- a/product/计算与网络/容器服务/控制台指南（新版）/云原生 etcd/账号授权.md
+++ b/product/计算与网络/容器服务/控制台指南（新版）/云原生 etcd/账号授权.md
@@ -1,5 +1,5 @@
 ## 账号授权
-为便于业务进行更细粒度的权限控制，云原生 ETCD 将于2022年5月5日接入 [访问管理 CAM](https://cloud.tencent.com/document/product/598)，接入 CAM 之后未被授权的子用户将无法正常使用 ETCD 控制台。云原生 ETCD 已在 CAM 中内置了 QcloudCEtcdFullAccess、QcloudCEtcdReadOnlyaccess 两个预设策略，用户完全访问和只读访问两种场景。若子用户需要使用 ETCD 服务，请联系拥有管理员权限的主账号为子用户授权，以便于用户能正常使用 ETCD 服务。
+为便于业务进行更细粒度的权限控制，云原生 etcd 将于2022年5月5日接入 [访问管理 CAM](https://cloud.tencent.com/document/product/598)，接入 CAM 之后未被授权的子用户将无法正常使用 etcd 控制台。云原生 etcd 已在 CAM 中内置了 QcloudCEtcdFullAccess、QcloudCEtcdReadOnlyaccess 两个预设策略，用户完全访问和只读访问两种场景。若子用户需要使用 etcd 服务，请联系拥有管理员权限的主账号为子用户授权，以便于用户能正常使用 etcd 服务。
 
 ## 操作步骤
 ### 为子用户授权
@@ -9,4 +9,4 @@
 	- QcloudCEtcdFullAccess
 	- QcloudCEtcdReadOnlyaccess
 ![](https://qcloudimg.tencent-cloud.cn/raw/a2ac6c921ee403abc3f41ab0c9dcd4c2.png)
-4. 单击**确定**。完成授权后，子账号将可以正常访问 ETCD 服务，管理员也可以通过创建自定义策略，为用户设置更精细的权限管控。
+4. 单击**确定**。完成授权后，子账号将可以正常访问 etcd 服务，管理员也可以通过创建自定义策略，为用户设置更精细的权限管控。
