--- a/product/安全服务/边缘安全加速平台/操作指南/快速入门/代理模式.md
+++ b/product/安全服务/边缘安全加速平台/操作指南/快速入门/代理模式.md
@@ -12,7 +12,7 @@
 仅 DNS 模式下，边缘加速平台提供全球专业的 DNS 解析服务。边缘加速平台 DNS 采用自研高性能 DNS 服务端软件，解析集群节点遍布60+个国家，自带数百 Gbps 的 DNS 攻击防护能力，致力于为用户提供专业快速安全稳定的全球 DNS 解析服务。
 
 ## 开启代理
-开启代理后，边缘加速平台将根据用户的套餐情况，为该主机记录（子域名）自动下发范围内的安全防护及站点加速配置。
+开启代理后，边缘加速平台将根据用户的套餐情况，为该主机记录（子域名）自动下发安全防护及站点加速配置。
 用户也可进入以下页面修改配置：
 - 前往 [安全防护](https://console.cloud.tencent.com/edgeone/security/ddos) > **DDoS 防护**页面, 修改站点及子域名 DDoS 配置。
 - 前往 [安全防护](https://console.cloud.tencent.com/edgeone/security/web)  > **Web 防护**页面, 修改站点及子域名七层防护配置。
