--- a/product/互联网中间件/分布式消息队列/快速入门/资源创建与准备.md
+++ b/product/互联网中间件/分布式消息队列/快速入门/资源创建与准备.md
@@ -26,8 +26,6 @@
 
 ### 步骤二：创建命名空间
 
-> ?若您的集群版本为2.6.1版本，则可以直接使用系统自动创建的 default 命名空间。更多命名空间相关介绍与操作请参考 [命名空间](https://cloud.tencent.com/document/product/1179/44819)。
-
 在 TDMQ Pulsar 版控制台的 **[命名空间](https://console.cloud.tencent.com/tdmq/env)** 页面，选择地域和刚刚创建好的集群，单击**新建**，创建一个命名空间。
 
 ![](https://main.qcloudimg.com/raw/e4edc6753135f858552e0020be0b58a8.png)
@@ -46,7 +44,7 @@
 
 ### 步骤四：创建 Topic 和订阅关系
 
-1. 在 **[Topic管理](https://console.cloud.tencent.com/tdmq/topic)** 页面，选择目标地域、当前集群和命名空间，单击**新建**，创建一个Topic。
+1. 在 **[Topic管理](https://console.cloud.tencent.com/tdmq/topic)** 页面，在顶部选择目标地域、当前集群和命名空间，单击**新建**，创建一个Topic。
 2. 单击操作列的**新增订阅**，为刚刚新建好的 Topic 创建一个订阅关系。
-3. 单击操作列的**更多**>**查看订阅**，可看到刚刚创建好的订阅。
-   ![](https://main.qcloudimg.com/raw/25b5d9e9baf6ef2ffed462edd6f1c210.png)
+3. 单击操作列的**更多**>**查看订阅/消费者**，可看到刚刚创建好的订阅。
+   ![](https://qcloudimg.tencent-cloud.cn/raw/88e92e6d524c0e3417d339746ca26cd5.png)
