--- a/product/管理与支持/云市场/平台规范通知/平台通告.md
+++ b/product/管理与支持/云市场/平台规范通知/平台通告.md
@@ -2,7 +2,7 @@
 
 尊敬的腾讯千帆云市场用户，您好！ 
 
-中企动力科技股份有限公司（以下简称：中企动力）因业务调整，申请于2022年X月X日退出腾讯千帆云市场，届时中企动力店铺中的商品将被全部下架不能产生新的交易，且后续将不在云市场平台开展任何经营活动。
+中企动力科技股份有限公司（以下简称：中企动力）因业务调整，申请于2022年03月02日退出腾讯千帆云市场，届时中企动力店铺中的商品将被全部下架不能产生新的交易，且后续将不在云市场平台开展任何经营活动。
 
 根据《云市场管理规范》，服务商退出时，对其与用户之间已经达成的交易，按如下方式处理：
 1. 购买该服务商的服务或产品的用户项目未完成或未启动的，用户可申请全额退款操作。
