--- a/product/数据库/云数据库MySQL/操作指南/参数模版管理/智能参数调优.md
+++ b/product/数据库/云数据库MySQL/操作指南/参数模版管理/智能参数调优.md
@@ -16,11 +16,13 @@
 
 ## 使用限制
 - 场景智能调优每月有次数限制，每月每个实例可进行3次调优，从每月1日开始重置调优次数。
-- AI 智能分析每月有次数限制，每月每个实例可进行1次调优，从每月1日开始重置调优次数。
+- AI 智能分析每月有次数限制，每月每个实例可进行1次调优，从每月1日开始重置调优次数（AI 智能分析暂未发布，敬请期待）。
 - 实例的 CPU 须为4核及以上，才能使用智能参数调优功能。
 - 智能调参任务列表仅会保留最近15次的调参结果。
 - 销毁/退还实例或实例到期时，如有智能参数调优任务处于进行中，则该任务会自动中止并删除该任务。
 - 一个实例仅支持同时运行一个调优任务，无法发起多个调优任务。
+- 智能参数调优功能目前暂时仅支持北京、上海、广州地域，后续将会逐步增加。
+- 目前此功能处于内测阶段，如需使用需提交 [内测申请](https://cloud.tencent.com/apply/p/c81qhbrbzsn)。
 
 ## 操作步骤
 ### 已购 MySQL 实例
