--- a/product/区块链/至信链开放联盟链/产品简介/功能与优势.md
+++ b/product/区块链/至信链开放联盟链/产品简介/功能与优势.md
@@ -44,7 +44,7 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/1048cc27fc12a38c1a49ed981d313ac0.png)
 
 #### 底层支撑
-开放联盟链底层支撑组件包括：TDSQL、 Redis、 云监控、云告警、云日志、云应用、TKE 等。底层支撑做为基本组件支持上层模块运行。
+开放联盟链底层支撑组件包括：TDSQL、 Redis、 云监控、云告警、云日志、云应用、TKE 等。底层支撑作为基本组件支持上层模块运行。
 
 #### 区块链层
 链层包含底层链核心基础设施：共识模块、密码学模块、P2P 模块、存储模块、身份管理模块、智能合约模块。链层支撑着上层智能合约和应用服务。
