--- a/product/移动与通信/云开发低代码平台/操作指南/组件/官方组件库/组件样式配置说明.md
+++ b/product/移动与通信/云开发低代码平台/操作指南/组件/官方组件库/组件样式配置说明.md
@@ -6,48 +6,73 @@
 ## 样式配置
 
 ### 布局
+微搭每个组件样式都提供**布局图**进行组件的**内边距**和**外边距**设置。布局图下方的组件**宽**和**高**设定框可以直接输入数字配置组件的高度和宽度。
+![](https://qcloudimg.tencent-cloud.cn/raw/2a5b55bd5a8620bf76d27019596652ef.png)
+#### 示例
+添加**文本**和**按钮**组件，设定文本**上方内边距**为100，**下方外边距**为500。其中100是指文本内容相对于**文本**组件上边框的距离，500是指**文本**组件相对于**按钮**组件之间的距离。
+![](https://qcloudimg.tencent-cloud.cn/raw/9c915f312c4b2d2b3b2310a81788d19c.png)
 
-1. **内联布局**：display:inline,也叫行内布局，一个内联组件只占用其边框所包含的空间
- - 组件从左到右流动布局
- - 组件的高度和宽度,以及顶部和底部边距不可设置
- - 组件的高度也就是它自身的建议行高
- - 三个文本框内联布局样式示例，可以看到第三个文本框高度配置了300px也不会生效（内联布局组件的高度不可配置）：
+微搭低代码应用编辑器提供以下五种布局模式：
+<dx-tabs>
+::: 内联布局
+**内联布局**（display:inline）也叫行内布局，一个内联组件只占用其边框所包含的空间。
+>?
+> - 组件从左到右流动布局。
+> - 组件的高度和宽度，以及顶部和底部边距不可设置。
+
+#### 示例
+下图三个文本框内联布局样式示例中，即使第三个文本组件样式高度配置了300px，也不会生效（内联布局组件的高度不可配置）。
    ![](https://qcloudimg.tencent-cloud.cn/raw/0107261dfb7675b5fda204fd45ce98c0.png) 
-2. **块级布局**：display:block,块级组件占据其父组件横向的整个空间，一个块级组件独占一行
- - 每个块级组件都从新的一行开始，并且其后的组件也另起一行
- - 组件的高度、宽度、行高以及顶和底边距都可设置
- - 组件宽度在不设置的情况下，是它本身父组件的100%（和父组件的宽度一致）
- - 三个文本框块级布局示例，可以看到组件垂直排列，第二个、第三个文本框宽度不足整行也都独占一行
-   ![](https://qcloudimg.tencent-cloud.cn/raw/da254d5e196910b4dec915595a7787fe.png)
-3. **内联块布局**：display:inline-block,同时具备以上内联布局、块级布局的特点
- - 组件和其他组件都在一行上, 左右布局
- - 组件的高度、宽度、行高以及顶和底边距都可设置
- - 三个文本框内联块布局示例，兼备内联布局和块级布局的特点，单个文本框高度可配置：
-   ![](https://qcloudimg.tencent-cloud.cn/raw/4c1544fda6578f043d16b7aa77bf8645.png)
-4. **弹性布局**：display:flex,弹性布局可以理解为一种一维的布局样式，一次处理一个维度上的元素布局，一行或者一列。当使用弹性布局时，有两根轴线，主轴和交叉轴（副轴)，可以设定主轴方向、主轴对齐方式、副轴对齐方式和换行方式
- - 主轴方向：水平、逆水平、垂直、逆垂直，主轴方向定义了之后，副轴垂直于主轴
- - 主轴对齐：左对齐、右对齐、水平居中、两端对齐、横向平分
- - 副轴对齐：起点对齐、终点对齐、终点对齐、项目的第一行文字的基线对齐、占满整个容器的高度
- - 换行：不换行、正换行、逆换行
- - 提供以下示例和说明方便理解弹性布局：
-   ![](https://qcloudimg.tencent-cloud.cn/raw/40c01bb6a4dd66ddaca6b25a6d3f9a1f.png)
-5. **隐藏**：display:none，隐藏当前组件，且隐藏的组件不会占用任何空间
- - 隐藏效果示例：添加顶部导航和按钮组件，顶部导航设为隐藏后，按钮组件上移：
-   ![](https://qcloudimg.tencent-cloud.cn/raw/1a9ead71c3a1af954d88c53f731c2825.png)
-     ![](https://qcloudimg.tencent-cloud.cn/raw/ce51f435560d968200f130e42f5ce40b.png)
-6. **布局图**：通过下面的布局图进行组件内边距和外边距的设置，布局图下方的组件宽度和高度设定框可以直接输入数字配置组件的高度和宽度，
-  ![](https://qcloudimg.tencent-cloud.cn/raw/4d6f5bbcb56e62241f9c3b80460f7a7b.png)
-  举例说明：添加文本和按钮组件，设定文本上方内边距100，下方外边距500，100是指文本内容相对于文本上边框的距离；500是指文本框相对于按钮组件的距离
-  ![](https://qcloudimg.tencent-cloud.cn/raw/86e14acbcb9db7370e9bf34026e033a5.png)
+:::
+::: 块级布局
+ **块级布局**（display:block），块级组件占据其父组件横向的整个空间，一个块级组件独占一行。
+>?
+> - 每个块级组件都从新的一行开始，并且其后的组件也另起一行。
+> - 组件的高度、宽度、行高以及顶和底边距都可设置。
+> - 组件宽度在不设置的情况下，宽度是它本身父组件的100%（和父组件的宽度一致）。
 
-  
+#### 示例
+下图三个文本框块级布局示例中，三个文本组件垂直排列。当第二个、第三个文本框宽度不足整行时，则独占一行。
+   ![](https://qcloudimg.tencent-cloud.cn/raw/da254d5e196910b4dec915595a7787fe.png)
+:::
+::: 内联块布局
+**内联块布局**（display:inline-block）同时具备以上内联布局、块级布局的特点。
+>?
+> - 组件和其他组件都在一行上, 左右布局。
+> - 组件的高度、宽度、行高以及顶和底边距都可设置。
+
+#### 示例
+下图三个文本框内联块布局示例中，三个文本框组件都兼备内联布局和块级布局的特点，且每个文本框高度可配置。
+   ![](https://qcloudimg.tencent-cloud.cn/raw/4c1544fda6578f043d16b7aa77bf8645.png)
+:::
+::: 弹性布局
+**弹性布局**（display:flex）可以理解为一种一维的布局样式，一次处理一个维度上的元素布局，一行或者一列。当使用弹性布局时，有两根轴线，主轴和交叉轴（副轴)，可以设定主轴方向、主轴对齐方式、副轴对齐方式和换行方式。
+>?
+> - 主轴方向：水平、逆水平、垂直、逆垂直，主轴方向定义了之后，副轴垂直于主轴。
+> - 主轴对齐：左对齐、右对齐、水平居中、两端对齐、横向平分。
+> - 副轴对齐：起点对齐、终点对齐、终点对齐、项目的第一行文字的基线对齐、占满整个容器的高度。
+> - 换行：不换行、正换行、逆换行。
+
+
+#### 示例
+新拉取一个**普通容器**组件，往该容器放6个宽度为160px的**文本**组件。选中新拉取的**普通容器组件**，布局参数如下图进行配置。当容器内组件水平排列宽度排满时，会对配置所选的**正换行**进行显示。
+![](https://qcloudimg.tencent-cloud.cn/raw/2b6a38531600248bbd9113d7c6966552.png)
+:::
+::: 隐藏
+**隐藏**（display:none）即隐藏当前组件，且隐藏的组件不会占用任何空间。
+
+#### 示例
+ 添加**顶部导航**和**按钮**组件。
+   ![](https://qcloudimg.tencent-cloud.cn/raw/1a9ead71c3a1af954d88c53f731c2825.png)
+当**顶部导航**设为**隐藏**后，**按钮**组件上移。
+![](https://qcloudimg.tencent-cloud.cn/raw/ce51f435560d968200f130e42f5ce40b.png)
+:::
+</dx-tabs>
+ 
 
 ### 定位
 
-1.定位方式：定位有四种方式，默认、相对、绝对、固定
-
-2.使用场景：配置多个组件在页面中的相对和绝对位置（层叠显示/不层叠显示），把某个组件固定在页面中、页面滚动组件固定不动，或者有多个重叠组件想让某些组件优先展示，可通过定位来控制
-
+微搭低代码应用编辑器提供以下四种定位方式：
 - **默认**：static，静态定位，组件按照Normal Flow(标准流、文档流、常规流、正常流)进行排布，left、right、top、bottom设置无效
 - **相对**：relative，组件按照Normal Flow(标准流、文档流、常规流、正常流)进行排布，可以通过left、right、top、bottom设置，定位参照对象是自己原来的位置。使用相对定位的组件不脱档，即组件原本占用的空间仍保留(后面组件不会贴上来)
 - **绝对**：absolute，组件脱离Normal Flow(标准流、文档流、常规流、正常流)，可以通过left、right、top、bottom设置，定位参考对象是相邻的父元素，如果找不到父级元素，参考对象就是整个页面；在绝大多数情况下，子元素的绝对定位都是相对于父元素进行定位，如果希望子元素相对于父元素进行定位，又不希望父元素脱标，那就设置父为相对定位，子为绝对定位，即一般可使用子绝父相的配置
