--- a/product/内容创作/应用云渲染/控制台指南/应用管理/应用启动参数配置.md
+++ b/product/内容创作/应用云渲染/控制台指南/应用管理/应用启动参数配置.md
@@ -2,7 +2,7 @@
 
 ## 操作步骤
 
-1. 进入 [应用云渲染控制台](https://console.cloud.tencent.com/car)。
+1. 进入**应用云渲染控制台**。
 2. 单击左侧导航栏的 **应用管理**，在应用管理页面的对应条目中单击 **启动参数配置**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/9f4463a15ec37a26827f176941f9b0fe.png)
 3. 填写配置信息：
