--- a/product/移动与通信/云开发低代码平台/操作指南/组件/官方组件库/组件样式配置说明.md
+++ b/product/移动与通信/云开发低代码平台/操作指南/组件/官方组件库/组件样式配置说明.md
@@ -72,34 +72,36 @@
 
 ### 定位
 
-微搭低代码应用编辑器提供以下四种定位方式：
-- **默认**：static，静态定位，组件按照Normal Flow(标准流、文档流、常规流、正常流)进行排布，left、right、top、bottom设置无效
-- **相对**：relative，组件按照Normal Flow(标准流、文档流、常规流、正常流)进行排布，可以通过left、right、top、bottom设置，定位参照对象是自己原来的位置。使用相对定位的组件不脱档，即组件原本占用的空间仍保留(后面组件不会贴上来)
-- **绝对**：absolute，组件脱离Normal Flow(标准流、文档流、常规流、正常流)，可以通过left、right、top、bottom设置，定位参考对象是相邻的父元素，如果找不到父级元素，参考对象就是整个页面；在绝大多数情况下，子元素的绝对定位都是相对于父元素进行定位，如果希望子元素相对于父元素进行定位，又不希望父元素脱标，那就设置父为相对定位，子为绝对定位，即一般可使用子绝父相的配置
-- **固定**：固定定位可以理解为一种特殊的绝对定位，组件脱离Normal Flow(标准流、文档流、常规流、正常流)，可以通过left、right、top、bottom设置，定位参考对象是整个页面；当页面滚动时，组件悬浮固定不动
-- **层级**：对于开启定位的组件，可以通过z-index属性来指定组件的层级，z-index层级需要一个整数作为参数，值越大的组件的层级越高，组件层级越高的越优先显示。如果组件层级一样 则优先显示后面设置的组件，父组件层级高于子组件，也不会盖住子组件
+配置多个组件在页面中的相对和绝对位置（层叠显示/不层叠显示），把某个组件固定在页面中、页面滚动组件固定不动、或者有多个重叠组件想让某些组件优先展示，可通过定位来控制。微搭低代码应用编辑器提供以下四种定位方式：
+- **默认**：static，静态定位，组件按照 Normal Flow(标准流、文档流、常规流、正常流)进行排布，left、right、top、bottom 设置无效。
+- **相对**：relative，组件按照 Normal Flow(标准流、文档流、常规流、正常流)进行排布，可以通过 left、right、top、bottom 设置，定位参照对象是自己原来的位置。使用相对定位的组件不脱档，即组件原本占用的空间仍保留(后面组件不会贴上来)。
+- **绝对**：absolute，组件脱离 Normal Flow(标准流、文档流、常规流、正常流)，可以通过 left、right、top、bottom 设置，定位参考对象是相邻的父元素，如果找不到父级元素，参考对象就是整个页面；在绝大多数情况下，子元素的绝对定位都是相对于父元素进行定位，如果希望子元素相对于父元素进行定位，又不希望父元素脱标，那就设置父为相对定位，子为绝对定位，即一般可使用子绝父相的配置。
+- **固定**：固定定位可以理解为一种特殊的绝对定位，组件脱离 Normal Flow(标准流、文档流、常规流、正常流)，可以通过 left、right、top、bottom 设置，定位参考对象是整个页面；当页面滚动时，组件悬浮固定不动。
+- **层级**：对于开启定位的组件，可以通过 z-index 属性来指定组件的层级，z-index 层级需要一个整数作为参数，值越大的组件的层级越高，组件层级越高的越优先显示。如果组件层级一样 则优先显示后面设置的组件，父组件层级高于子组件，也不会盖住子组件。
+
+
 
 ### 字体
 
-使用场景：需要调整默认组件的字重、字号、行高、字色、对齐方式、透明度时，可通过字体对样式进行修改
+需要调整默认组件的字重、字号、行高、字色、对齐方式、透明度时，可通过字体对样式进行修改。
 
-- **字重**：字重分为粗、正常、细三种
-- **字号**：可以手动输入字号调整文字大小
-- **行高**：可以手动输入数字调整文字所在行高度
-- **字色**：可以点击选择文字颜色
-- **对齐**：文字的对齐方式（左对齐，居中，右对齐，两端对齐），当文字只有一行时，样式代码编辑器中text-align修改为text-align-last两端对齐生效
-- **不透明度**：组件的透明效果，值越接近于0越透明，100为完全不透明
+- **字重**：字重分为粗、正常、细三种。
+- **字号**：可以手动输入字号调整文字大小。
+- **行高**：可以手动输入数字调整文字所在行高度。
+- **字色**：可以单击选择文字颜色。
+- **对齐**：文字的对齐方式（左对齐，居中，右对齐，两端对齐），当文字只有一行时，样式代码编辑器中 text-align 修改为 text-align-last 两端对齐生效。
+- **不透明度**：组件的透明效果，值越接近于0越透明，100为完全不透明。
 
 ### 背景
 
-使用场景：需要调整组件的背景颜色时可以通过背景对样式进行修改
+需要调整组件的背景颜色时可以通过背景对样式进行修改。
 
-- **背景填充方式-无填充**：选择组件之后默认背景填充方式为无填充。注：无填充不是没有颜色填充，是组件的初始填充背景
-- **背景填充方式-颜色填充**：可以点击选择组件背景颜色
-- **背景填充方式-图片填充**：可以点击选择素材中的图片作为组件背景（也可以输入图片对应的URL配置背景图片）
-- **宽高尺寸**：原图尺寸（原图尺寸和组件尺寸不相同会显示不全）、宽度拉伸高度自适应（图片宽度适配组件，高度根据宽度自动调整，图片垂直重复）、宽度自适应高度拉伸（图片高度适配组件、宽度根据高度自动调整，图片水平重复）、宽度高度均拉伸（图片按照当前组件大小调整宽高、整张图片完整显示于组件中）
-- **图片位置**：调整图片位置：左上、居中靠上、右上、居中靠左、居中、居中靠右、左下、居中靠下、右下。宽高高度均拉伸时默认图片位置居中，无需选择图片位置
-- **重复方式**：不重复、水平重复、垂直重复、水平垂直重复。图片宽高尺寸选择宽度拉伸高度自适应和宽度自适应高度拉伸时，可通过重复方式配置图片在组件中是否重复显示
+- **背景填充方式-无填充**：选择组件之后默认背景填充方式为无填充。注意：无填充不是没有颜色填充，是组件的初始填充背景。
+- **背景填充方式-颜色填充**：可以单击选择组件背景颜色。
+- **背景填充方式-图片填充**：可以单击选择素材中的图片作为组件背景（也可以输入图片对应的 URL 配置背景图片）。
+- **宽高尺寸**：原图尺寸（原图尺寸和组件尺寸不相同会显示不全）、宽度拉伸高度自适应（图片宽度适配组件，高度根据宽度自动调整，图片垂直重复）、宽度自适应高度拉伸（图片高度适配组件、宽度根据高度自动调整，图片水平重复）、宽度高度均拉伸（图片按照当前组件大小调整宽高、整张图片完整显示于组件中）。
+- **图片位置**：调整图片位置：左上、居中靠上、右上、居中靠左、居中、居中靠右、左下、居中靠下、右下。宽高高度均拉伸时默认图片位置居中，无需选择图片位置。
+- **重复方式**：不重复、水平重复、垂直重复、水平垂直重复。图片宽高尺寸选择宽度拉伸高度自适应和宽度自适应高度拉伸时，可通过重复方式配置图片在组件中是否重复显示。
 
 ### 边框
 
@@ -189,7 +191,7 @@ background: rgb(181, 247, 151)
 
 ![](https://qcloudimg.tencent-cloud.cn/raw/b5ef24a96d1d35c62f82670991caea4b.png)
 
-### 操作示例
+## 操作示例
 
 1. 以下为具体的一个样式配置的操作示例（以一个商城的首页为例）：
 2. 首先我们新建一个门户应用，选择从空白新建，首页空白页我们添加顶部导航、底部 tab 栏、轮播图和宫格导航：
@@ -213,7 +215,8 @@ background: rgb(181, 247, 151)
    ![](https://qcloudimg.tencent-cloud.cn/raw/7c5c5095ac8b28fd82a029df052ddb68.png)
  - 首页整体样式布局设置好之后我们可以通过配置跳转链接，或者添加其他组件等丰富首页内容
 
-### 常用布局样式-表单双列布局
+## 常用布局样式
+### 表单双列布局
 
 页面中有几个单行输入组件，每个单行输入组件都占用一行很浪费空间，此时我们可以通过配置表单的布局，实现几个表单横向均匀排列的效果:
 
@@ -228,7 +231,7 @@ background: rgb(181, 247, 151)
  - 两个表单容器都设定弹性布局、主轴对齐-左对齐，效果如下：
    ![](https://qcloudimg.tencent-cloud.cn/raw/786647b20a2fc422b5e67a1721438cad.png)
 
-###  常用布局样式-图文叠放/图图叠放
+###  图文叠放/图图叠放
 
 当我们需要让组件悬浮于其他组件之上，组件本身不占实际空间，可参考以下样式配置方法：
 
@@ -239,14 +242,14 @@ background: rgb(181, 247, 151)
  - 之后想要在图片右上角添加强烈推荐的图标（图图叠放），继续在容器中添加一个图片组件，上传强烈推荐图标，设定图标的定位为相对，上边距和左边距都设定为5，效果如下图：
    ![](https://qcloudimg.tencent-cloud.cn/raw/f55f31237376cb39bdd439f98566b7ce.png)
 
-### 常用布局样式-组件固定于页面
+### 组件固定于页面
 
 当我们需要让组件悬浮固定于页面（页面滚动组件保持位置不动），可参考以下样式配置方法：
 
  - 页面中首先添加一个图片组件，上传提示图标，图标定位选择固定，然后设定上边距500，右边距20（图片组件不属于任何容器，此处的边距是相对于整个页面的），就可以达到提示图标固定于页面中，上下滑动位置不变：
    ![](https://qcloudimg.tencent-cloud.cn/raw/cbf1005fab0be724d4c9adae1b58a453.png)
 
-### 常用布局样式-多图片布局
+### 多图片布局
 
 当我们需要几张图片组合布局，追求比较美观的布局方式，下面以三张图片上一下二的布局配置，来让大家理解多图片布局的方法：
 
@@ -255,7 +258,7 @@ background: rgb(181, 247, 151)
  - 在此基础上为了更美观我们也可以坐下微调，比如把图片二和图片三和最上面图片的间距设定大一些，我们分别选中图二和图三，外边距设定为20，效果如下：
    ![](https://qcloudimg.tencent-cloud.cn/raw/ac8ad9bf8f57448767c0c461ce55af1c.png)
 
-### 常用布局样式-组件横向平分
+### 组件横向平分
 
 当我们需要几个组件横向平均分布时，可以参考以下的样式配置方式：
 
@@ -267,7 +270,7 @@ background: rgb(181, 247, 151)
    ![](https://qcloudimg.tencent-cloud.cn/raw/67b549e24ecbfa44276974a1d1b4b2a5.png)
  - 操作技巧：我们配置了一个文本样式之后，其他文本组件也想要配置同样的样式，如何快速操作？当然我们可以复制粘贴或者通过配置通用style-classname的方式，如果我们只想参照样式，使用复制粘贴不太好，我们也可以通过样式代码编辑器快速配置相同的样式，配置了一个文本A的样式之后，我们打开A的样式代码编辑器，复制代码，选中文本组件B，打开B的样式代码编辑器，复制代码到编辑器，点击保存即可，此处提供一种样式复制的思路供参考
 
-### 常用布局样式-双列图文布局
+### 双列图文布局
 
 小程序或者H5段我们想要展示内容时会用到比较多的双列图文展示，如下图。需要配置双列图文布局时可以参考以下的配置步骤：
 ![](https://qcloudimg.tencent-cloud.cn/raw/23ed093bb69eb209d6455137229c5197.png)
