--- a/product/计算与网络/专线接入/操作指南18-08-27/管理专线网关/创建专线网关.md
+++ b/product/计算与网络/专线接入/操作指南18-08-27/管理专线网关/创建专线网关.md
@@ -1,7 +1,7 @@
 本文将介绍如何创建专线网关，以及入方向路由说明。
 
 ## 前提条件
-- 您已申请物理专线，具体操作请参见[ 申请物理专线](https://cloud.tencent.com/document/product/216/48586)。
+- 您已申请物理专线，具体操作请参见[ 申请接入物理专线](https://cloud.tencent.com/document/product/216/48586)。
 - 您已创建腾讯云 VPC，具体操作请参见[ 快速搭建 IPv4 私有网络](https://cloud.tencent.com/document/product/215/30716)。
 
 ## 使用限制
@@ -86,5 +86,5 @@
 </tbody></table>
 
 ## 后续操作
-- 若您创建的云联网专线网关，则还需在专线网关添加 IDC 网段才可以实现网络通信，详情请参见[ 专线网关添加 IDC 网段](https://cloud.tencent.com/document/product/216/50956)。
+- 若您创建的云联网专线网关，则还需在专线网关添加 IDC 网段才可以实现网络通信，详情请参见[ 发布网段至云联网](https://cloud.tencent.com/document/product/216/50956)。
 - 若您创建的 VPC 专线网关，还需配置 VPC 路由表信息，才能实现网络通信，详情请参见[ 配置路由表](https://cloud.tencent.com/document/product/216/19259)。
