--- a/product/区块链/至信链开放联盟链/购买指南.md
+++ b/product/区块链/至信链开放联盟链/购买指南.md
@@ -51,4 +51,4 @@
 #### 退费金额
 退款金额 = 订单金额 - 使用量 * 单价
 #### 退费流程
-退费请进入腾讯云官网联系客服申请退费。
+退费请进入腾讯云官网 [在线客服](https://cloud.tencent.com/act/event/Online_service) 申请退费。
