--- a/product/数据库/云数据库PostgreSQL/操作指南/内核版本管理/内核版本更新动态.md
+++ b/product/数据库/云数据库PostgreSQL/操作指南/内核版本管理/内核版本更新动态.md
@@ -1,6 +1,32 @@
 本文为您介绍云数据库 PostgreSQL 内核版本更新动态，如需升级，请 [提交工单](https://console.cloud.tencent.com/workorder/category)。
 
+##  PostgreSQL 14
+### v14.2_r1.1
+#### 新特性
+- 支持 cos_fdw 插件。
+
+### v14.2_r1.0
+#### 版本改动
+- 合入社区版本 14.2，合入 TencentDB PostgreSQL 内核改动能力。
+- 支持 pg_cron 插件。
+- 支持 TopN 插件。
+- 支持 TDE 透明数据加密。
+
 ##  PostgreSQL 13
+### v13.3_r1.3
+#### 新特性
+- 支持 cos_fdw 插件。
+
+### v13.3_r1.2
+#### 新特性
+- 支持 pg_cron 插件。
+- 支持 TopN 插件。
+- 支持 TDE 透明数据加密。
+
+### v13.3_r1.1
+#### 版本改动
+- 修护了一些插件管理方面的 BUG。
+
 ### v13.3_r1.0
 #### 版本改动
 - 合入社区 PostgreSQL 13.3 版本的所有功能。
@@ -8,6 +34,16 @@
 - 合入腾讯云关于 PostgreSQL 历史优化功能包。
 
 ## PostgreSQL 12
+### v12.7_r1.3
+#### 新特性
+- 支持 cos_fdw 插件。
+
+### v12.7_r1.2
+#### 新特性
+- 支持 pg_cron 插件。
+- 支持 TopN 插件。
+- 支持 TDE 透明数据加密。
+
 ### v12.7_r1.1
 #### 版本改动
 - 合入社区 PostgreSQL 12.7 版本的所有功能。
@@ -19,6 +55,16 @@
 - 合入腾讯云关于 PostgreSQL 历史优化功能包。
 
 ## PostgreSQL 11
+### v11.12_r1.3
+#### 新特性
+- 支持 cos_fdw 插件。
+
+### v11.12_r1.2
+#### 新特性
+- 支持 pg_cron 插件。
+- 支持 TopN 插件。
+- 支持 TDE 透明透明加密。
+
 ### v11.12_r1.1
 #### 版本改动
 - 合入社区 PostgreSQL 11.12 版本的所有功能。
@@ -29,10 +75,26 @@
 - 新增管理员角色 pg_tencentdb_superuser。
 - 合入腾讯云关于 PostgreSQL 历史优化功能包。
 
+
 ## PostgreSQL 10
+### v10.17_r1.3
+#### 新特性
+- 支持 cos_fdw 插件。
+
+### v10.17_r1.2
+#### 新特性
+- 支持 pg_cron 插件。
+- 支持 TopN 插件。
+- 支持 TDE 透明数据加密。
+
 ### v10.17_r1.1
 #### 版本改动
 - 合入社区 PostgreSQL 10.17 版本的所有功能。
+
+### v10.4_r1.1
+#### 版本改动
+- 修护了一些插件管理方面的 BUG。
+
 
 ### v10.4_r1.0
 #### 新特性
