--- a/product/监控与管理/访问控制/什么是访问控制（CAM）/04-应用场景.md
+++ b/product/监控与管理/访问控制/什么是访问控制（CAM）/04-应用场景.md
@@ -17,7 +17,7 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/a6f90a0e3231dc4422521c78268281d1.png)
 
 
-## 账户安全升级，使用二次身份校验
+## 二次身份校验提升账户安全
 
 - **业务类型**：需要给子用户提供在用户名和密码之外再额外增加的一层保护。
 - **使用建议**：支持3种校验方式：微信扫码校验、MFA 设备校验（分为硬件 MFA 设备校验和虚拟 MFA 设备校验）、手机验证码校验。根据设置状态，可能需要在登录和进行敏感操作前进行微信扫码或者提供有效的六位安全码来证实身份和环境安全可靠。
