--- a/product/管理与支持/计费相关(new)/常见问题/提现常见问题.md
+++ b/product/管理与支持/计费相关(new)/常见问题/提现常见问题.md
@@ -36,8 +36,7 @@
 
 ### 为何提现失败？
 原路提现失败常见原因有：微信对应的银行卡已解绑、微信账号被冻结、微信对应的银行卡已注销或冻结。
-- 若因微信对应的银行卡解绑，建议重新绑定银行卡再申请提现。
-- 若因微信被冻结导致提现，请直接联系微信官方人员申请资金退回。
+若因微信对应的银行卡解绑，建议重新绑定银行卡再申请提现。微信团队针对微信支付能力被限制冻结场景有一套完整，详细的资金取出/转移流程，建议您在操作原路提现后直接联系腾讯微信官网客服申请资金去除/转移。
 
 线下提现失败常见原因有：银行卡号不存在、银行卡已注销或冻结，提现时填写的信息与实名认证信息不符。
 若因微信对应的银行卡已注销或冻结，银行卡号不存在、银行卡已注销或冻结，等无法提现，请务必收集齐全相关资料证明（如 ：银行卡注销证明，客户登录控制台的截图证明、客户汇款凭证或在线充值凭证，实名认证账户的银行信息）并使用腾讯云绑定的邮箱发送邮件至cloud_feiyong@tencent.com 申请云费用提现（收款户名需要与腾讯云账号实名认证信息保持一致）。
