--- a/product/计算与网络/容器服务/常见问题/弹性集群类/弹性集群相关问题.md
+++ b/product/计算与网络/容器服务/常见问题/弹性集群类/弹性集群相关问题.md
@@ -234,7 +234,7 @@ eks.tke.cloud.tencent.com/image-gc-high-threshold: "80"
 ```
 eks.tke.cloud.tencent.com/container-gc-threshold: "85"
 ```
-如果已退出的容器不想被自动清理（比如需要退出的信息进一步排障的），可以通过如下 annotation 关闭容器的自动清理，但副作用是磁盘空间无法自动释放：
+如果已退出的容器不想被自动清理（例如需要退出的信息进一步排障的），可以通过如下 annotation 关闭容器的自动清理，但副作用是磁盘空间无法自动释放：
 ```
 eks.tke.cloud.tencent.com/must-keep-last-container: "true"
 ```
