--- a/product/安全服务/边缘安全加速平台/操作指南/四层代理.md
+++ b/product/安全服务/边缘安全加速平台/操作指南/四层代理.md
@@ -1,5 +1,5 @@
 ## 功能简介
-四层代理为 TCP/UDP 应用提供客户级 DDoS 防护和四层加速服务，，依赖 EdgeOne 平台分布广泛的四层代理节点、独有的 DDoS 防护模块和智能路由技术，实现终端用户就近接入、边缘流量清洗和端口监听转发，为四层应用提供高可用低延迟的安全加速服务。
+四层代理为 TCP/UDP 应用提供客户级 DDoS 防护和四层加速服务，依赖 EdgeOne 平台分布广泛的四层代理节点、独有的 DDoS 防护模块和智能路由技术，实现终端用户就近接入、边缘流量清洗和端口监听转发，为四层应用提供高可用低延迟的安全加速服务。
 ![](https://qcloudimg.tencent-cloud.cn/raw/9633cea653e393a70f7abb721d4e7018.png)
 >?
 >- 目前边缘安全加速平台控制台仅对部分用户开放，如需访问控制台，请 [联系我们](https://cloud.tencent.com/online-service) 开通权限。
