--- a/product/计算与网络/无服务器云函数/产品简介/技术选型/云函数存储选型.md
+++ b/product/计算与网络/无服务器云函数/产品简介/技术选型/云函数存储选型.md
@@ -1,5 +1,5 @@
 
-云函数 SCF 提供的是弹性按量计算的 Faas 服务，可做为 Workload 承载众多 Serverless 应用。SCF 在运行时，开发者会由于业务需求访问各类外部数据，如导入第三方库、非结构化数据以及函数计算输出，这就需要云函数 SCF 提供丰富的存储支持类型，以支持开发者的业务需要。
+云函数 SCF 提供的是弹性按量计算的 Faas 服务，可作为 Workload 承载众多 Serverless 应用。SCF 在运行时，开发者会由于业务需求访问各类外部数据，如导入第三方库、非结构化数据以及函数计算输出，这就需要云函数 SCF 提供丰富的存储支持类型，以支持开发者的业务需要。
 
 云函数 SCF 目前已支持的存储类型，其中包括对接云上的其他云产品对象存储 COS、文件存储 CFS，同时还要本地临时存储，以及层。本篇文档介绍这些存储类型之间的区别，为开发者做选项时做参考。
 
