--- a/product/存储与CDN/安全加速/购买指南/安全防护包计费说明.md
+++ b/product/存储与CDN/安全加速/购买指南/安全防护包计费说明.md
@@ -46,7 +46,7 @@
 3. 不满足前两点的情况下，未使用包的抵扣优先级为：临近有效期包 > 金额更小包 > 购买自动续订抵扣包；
 4. 若计费用量产生时，检测到您的账户下没有提前预购安全防护包，则会进入安全防护量后付费。
 
->? 若账户下某一时刻同时存在来源为“续订“和”自主购买“两种未使用的包，则抵扣优先级需判断未使用”自主购买“包和“续订”包的有效期。若未使用”自主购买“包有效期近，先抵扣”自主购买“包，再扣“续订”包；反之，先抵扣“续订”包，再抵扣”自主购买“包。
+>? 若账户下某一时刻同时存在来源为“续订”和“自主购买”两种未使用的包，则抵扣优先级需判断未使用“自主购买”包和“续订”包的有效期。若未使用“自主购买包”有效期近，先抵扣“自主购买”包，再扣“续订”包；反之，先抵扣“续订”包，再抵扣“自主购买”包。
 
 ### 抵扣时间
 
