--- a/product/存储与CDN/安全加速/购买指南/套餐升配说明.md
+++ b/product/存储与CDN/安全加速/购买指南/套餐升配说明.md
@@ -14,7 +14,7 @@
 3. 勾选需要升级的安全防护能力项，单击**立即升级**即可平滑升级套餐。
 ![](https://qcloudimg.tencent-cloud.cn/raw/1b86db083da63bd521a798e25ee1201d.jpg)
 
->!  安全加速 SCDN 入门版不支持 **WEB 防护**、**BOT 防护**能力。若需购买，请先勾选**增强流量清洗**，后勾选 **WEB 防护**、**BOT 防护**。
+>!  安全加速 SCDN 入门版不支持 **Web 防护**、**BOT 防护**能力。若需购买，请先勾选**增强流量清洗**，后勾选 **Web 防护**、**BOT 防护**。
 
 ## 升级须知
 
@@ -25,5 +25,5 @@
 	- 升级金额 = 1,060  x 11/30 + 16,600 x 19/30 - 1,060 = 9,842.00 元
 	- 由于入门版升级到增强版套餐，**追送赠送量** ： 
   （1）DDoS/CC 入门流量清洗 升级为 DDoS/CC 增强流量清洗，故追送安全防护量 = 10TB x 19/30 = 6333.33GB
-  （2）新增 WEB 防护能力，故追送 WEB 防护量 = 1000万次 x 19/30 = 633.33万次请求
+  （2）新增 Web 防护能力，故追送 Web 防护量 = 1000万次 x 19/30 = 633.33万次请求
   （3）新增 BOT 防护能力，故追送 BOT 防护量 = 1000万次 x 19/30 = 633.33万次请求
