--- a/product/计算与网络/无服务器云函数/产品简介/技术选型/云函数存储选型.md
+++ b/product/计算与网络/无服务器云函数/产品简介/技术选型/云函数存储选型.md
@@ -1,7 +1,94 @@
 
 云函数 SCF 提供的是弹性按量计算的 Faas 服务，可作为 Workload 承载众多 Serverless 应用。SCF 在运行时，开发者会由于业务需求访问各类外部数据，如导入第三方库、非结构化数据以及函数计算输出，这就需要云函数 SCF 提供丰富的存储支持类型，以支持开发者的业务需要。
 
-云函数 SCF 目前已支持的存储类型，其中包括对接云上的其他云产品对象存储 COS、文件存储 CFS，同时还要本地临时存储，以及层。本篇文档介绍这些存储类型之间的区别，为开发者做选项时做参考。
+云函数 SCF 目前已支持的存储类型，其中包括对接云上的其他云产品对象存储 COS、文件存储 CFS，同时还要本地临时存储，以及层。本篇文档介绍这些存储类型之间的区别，供开发者选型时参考。
+
+## 选型分析
+下表从不同维度比对了云函数 SCF 的这四种不同数据存储选项的特性：
+
+<table>
+  <tr>
+    <th class="align-left">条目</th>
+    <th class="align-left">对象存储 COS</th>
+    <th class="align-left">文件存储 CFS</th>
+    <th class="align-left">临时存储 /tmp</th>
+    <th class="align-left">层</th>
+  </tr>
+  <tr>
+    <td>最大空间</td>
+    <td>弹性</td>
+    <td>弹性</td>
+    <td>512M</td>
+    <td>50M（ZIP上传）</td>
+  </tr>
+  <tr>
+    <td>持久性</td>
+    <td>持久化</td>
+    <td>持久化</td>
+    <td>临时存储</td>
+    <td>持久化</td>
+  </tr>
+  <tr>
+    <td>存储内容</td>
+    <td>可写</td>
+    <td>可写</td>
+    <td>可写</td>
+    <td>不可写</td>
+  </tr>
+  <tr>
+    <td>存储类型</td>
+    <td>对象</td>
+    <td>文件系统</td>
+    <td>文件系统</td>
+    <td>代码依赖归档</td>
+  </tr>
+  <tr>
+    <td>事件源集成</td>
+    <td>是</td>
+    <td>否</td>
+    <td>否</td>
+    <td>否</td>
+  </tr>
+  <tr>
+    <td>操作</td>
+    <td>对象存储</td>
+    <td>文件读写</td>
+    <td>文件读写</td>
+    <td>运行时不可写</td>
+  </tr>
+  <tr>
+    <td>计费</td>
+    <td><a href="https://cloud.tencent.com/document/product/436/16871" >存储、请求、管理</a></td>
+    <td><a href="https://cloud.tencent.com/document/product/582/9553" >存储</a></td>
+    <td>无额外计费</td>
+    <td>无额外计费</td>
+  </tr>
+  <tr>
+    <td>调用间共享</td>
+    <td>是</td>
+    <td>是</td>
+    <td>否</td>
+    <td>是</td>
+  </tr>
+  <tr>
+    <td>函数的访问速度</td>
+    <td>快速的</td>
+    <td>非常快</td>
+    <td>最快的</td>
+    <td>快速的</td>
+  </tr>
+  <tr>
+    <td>业务场景</td>
+    <td>日志、业务文件存储</td>
+    <td>日志、业务文件存储</td>
+    <td>业务产生的临时文件</td>
+    <td>代码依赖归档</td>
+  </tr>
+</table>
+
+
+
+
 
 ## 存储类型
 ### 对象存储 COS
@@ -44,87 +131,4 @@ with zipfile.ZipFile(yourzipfile, 'r') as zip:
 [层](https://cloud.tencent.com/document/product/583/40159)，是云函数 SCF 来解决公共依赖库存储的方案。如果云函数 SCF 拥有较多的依赖库或公共代码文件，可以使用 SCF 中的层进行管理。层管理，可以将依赖放在层中而不是部署包中，可确保部署包保持较小的体积。对于 Node.js、Python 和 PHP 函数，只要将部署程序包保持在 10MB 以下，就可以在 SCF 控制台中在线编辑函数代码。
 
 层管理是静态的。创建层的压缩文件将按照层的版本进行存储。层在与函数进行绑定时，将按照具体的层版本与函数版本进行绑定。一个函数目前最多支持绑定5个层的具体版本，并在绑定时有一定顺序。
-
-## 选型分析
-下表从不同维度比对了云函数 SCF 的这四种不同数据存储选项的特性：
-
-<table>
-  <tr>
-    <th class="align-left">条目</th>
-    <th class="align-left">对象存储 COS</th>
-    <th class="align-left">文件存储 CFS</th>
-    <th class="align-left">临时存储 /tmp</th>
-    <th class="align-left">层</th>
-  </tr>
-  <tr>
-    <td>最大空间</td>
-    <td>弹性</td>
-    <td>弹性</td>
-    <td>512M</td>
-    <td>50M（ZIP上传）</td>
-  </tr>
-  <tr>
-    <td>持久性</td>
-    <td>持久化</td>
-    <td>持久化</td>
-    <td>临时存储</td>
-    <td>持久化</td>
-  </tr>
-  <tr>
-    <td>存储内容</td>
-    <td>可变</td>
-    <td>可变</td>
-    <td>可变</td>
-    <td>不可变</td>
-  </tr>
-  <tr>
-    <td>存储类型</td>
-    <td>对象</td>
-    <td>文件系统</td>
-    <td>文件系统</td>
-    <td>代码依赖归档</td>
-  </tr>
-  <tr>
-    <td>事件源集成</td>
-    <td>是</td>
-    <td>否</td>
-    <td>否</td>
-    <td>否</td>
-  </tr>
-  <tr>
-    <td>操作</td>
-    <td>对象存储</td>
-    <td>文件读写</td>
-    <td>文件读写</td>
-    <td>运行时不可变</td>
-  </tr>
-  <tr>
-    <td>计费</td>
-    <td><a href="https://cloud.tencent.com/document/product/436/16871" >存储、请求、管理</a></td>
-    <td><a href="https://cloud.tencent.com/document/product/582/9553" >存储</a></td>
-    <td>无额外计费</td>
-    <td>无额外计费</td>
-  </tr>
-  <tr>
-    <td>调用间共享</td>
-    <td>是</td>
-    <td>是</td>
-    <td>否</td>
-    <td>是</td>
-  </tr>
-  <tr>
-    <td>函数的访问速度</td>
-    <td>快速的</td>
-    <td>非常快</td>
-    <td>最快的</td>
-    <td>快速的</td>
-  </tr>
-  <tr>
-    <td>业务场景</td>
-    <td>日志、业务文件存储</td>
-    <td>日志、业务文件存储</td>
-    <td>业务产生的临时文件</td>
-    <td>代码依赖归档</td>
-  </tr>
-</table>
 
