--- a/product/存储与CDN/安全加速/购买指南/计费说明（新）.md
+++ b/product/存储与CDN/安全加速/购买指南/计费说明（新）.md
@@ -54,9 +54,9 @@
 **赠送规则：**套餐内的赠送量，在首月购买时，会根据按比例折算赠送，次月将全额赠送。
 **赠送量公式：**每月1号购买套餐，将获得全额赠送量；非每月1号下单，则当月折算赠送量 = 剩余有效天数/当月有效天数 x 全额赠送量。
 **赠送示例：**您在2022-04-08 16:24:06 购买 SCDN 增强版套餐（1个月有效期），因此获得：
-（1）安全防护量 = 22/30 x 10000GB =7333.33 GB ；
-（2）Web 防护量 = 22/30 x 1000 =733.33 万次 ；
-（3）BOT防护量 = 22/30 x 1000 =733.33 万次 。
+（1）安全防护量 = 22/30 \* 10000GB =7333.33 GB ；
+（2）Web 防护量 = 22/30 \* 1000 =733.33 万次 ；
+（3）BOT防护量 = 22/30 \* 1000 =733.33 万次 。
 
 >?系统计费最小单位：安全防护量 - Byte（1GB = 10^9 Byte）；Web 防护量/BOT防护量 - 次。以上举例为方便描述规则，统一以GB、万次请求（小数点后两位）取整。
 
