--- a/product/计算与网络/无服务器云函数/产品简介/技术选型/云函数存储选型.md
+++ b/product/计算与网络/无服务器云函数/产品简介/技术选型/云函数存储选型.md
@@ -82,7 +82,7 @@
     <td>日志、业务文件存储</td>
     <td>日志、业务文件存储</td>
     <td>业务产生的临时文件</td>
-    <td>代码依赖归档</td>
+    <td>减少代码包提及或函数之间复用代码库、工具等</td>
   </tr>
 </table>
 
