--- a/product/存储与CDN/安全加速/购买指南/套餐升配说明.md
+++ b/product/存储与CDN/安全加速/购买指南/套餐升配说明.md
@@ -22,8 +22,8 @@
 2. 套餐升级成功后，当月会追加一定的赠送量，可前往**服务概览**页右侧**安全加速 SCDN** 套餐详情中查看。
 **示例：**您在2022-04-08 16:24:06 购买 SCDN 入门版套餐（1个月有效期），实际支付1,060元；于控制台在 2022-04-18 18:24:06 升级为 SCDN 增强版套餐（官网定价16,600元/月）。则：
 	- 到期时间仍为原套餐（入门版）到期时间  **2022-05-08 16:24:06**
-	- 升级金额 = 1,060  x 11/30 + 16,600 x 19/30 - 1,060 = 9,842.00 元
+	- 升级金额 = 1,060  \* 11/30 + 16,600 \* 19/30 - 1,060 = 9,842.00 元
 	- 由于入门版升级到增强版套餐，**追送赠送量** ： 
-  （1）DDoS/CC 入门流量清洗 升级为 DDoS/CC 增强流量清洗，故追送安全防护量 = 10TB x 19/30 = 6333.33GB
-  （2）新增 Web 防护能力，故追送 Web 防护量 = 1000万次 x 19/30 = 633.33万次请求
-  （3）新增 BOT 防护能力，故追送 BOT 防护量 = 1000万次 x 19/30 = 633.33万次请求
+  （1）DDoS/CC 入门流量清洗 升级为 DDoS/CC 增强流量清洗，故追送安全防护量 = 10TB \* 19/30 = 6333.33GB
+  （2）新增 Web 防护能力，故追送 Web 防护量 = 1000万次 \* 19/30 = 633.33万次请求
+  （3）新增 BOT 防护能力，故追送 BOT 防护量 = 1000万次 \* 19/30 = 633.33万次请求
