--- a/product/大数据与AI/万象优图2.0/控制台指南/存储桶管理/媒体处理/自定义函数处理.md
+++ b/product/大数据与AI/万象优图2.0/控制台指南/存储桶管理/媒体处理/自定义函数处理.md
@@ -1,11 +1,11 @@
 ## 简介
 
-当数据万象（Cloud Infinite，CI）媒体处理的现有业务或功能无法满足您的需求时，您可以使用云函数（Serverless Cloud Function，SCF）自定义函数处理功能，编写最核心的代码逻辑以便灵活实现自身业务需求，同时降低研发成本。关于 SCF 详情请参见 [云函数文档](https://cloud.tencent.com/document/product/583/9199)。
+当数据万象（Cloud Infinite，CI）多媒体处理的现有业务或功能无法满足您的需求时，您可以使用云函数（Serverless Cloud Function，SCF）自定义函数处理功能，编写最核心的代码逻辑以便灵活实现自身业务需求，同时降低研发成本。关于 SCF 详情请参见 [云函数文档](https://cloud.tencent.com/document/product/583/9199)。
 
 >?
-> - 目前自定义函数处理功能仅支持在 [工作流](https://cloud.tencent.com/document/product/460/46488) 中发起。
+> - 目前自定义函数处理功能仅支持在 [工作流](https://cloud.tencent.com/document/product/1545/65179) 中发起。
 > - 使用 SCF 进行自定义处理，会产生相应的功能费用，由云函数服务收取，详细的计费说明请参见 [云函数计费文档](https://cloud.tencent.com/document/product/583/17299)。
-> 
+>
 
 ## 操作步骤
 
@@ -20,11 +20,5 @@
  - 函数分类：可选择常用功能快速进行 COS 对象常用操作，或选择自定义自行配置其他功能相关参数。
  - 功能类型：选择常用功能时，可进行预置功能选择，参照 [使用自定义函数管理 COS 文件](https://cloud.tencent.com/document/product/460/71357) 操作即可。
  - 选择函数：目前工作流中仅支持异步执行且开启状态追踪的函数。
- 如需新增函数，单击“新增函数”，可跳转到云函数控制台进行创建。然后按照以下配置项说明进行配置即可。
-![](https://main.qcloudimg.com/raw/b2efcc0465bf89d02f0182619393fea7.png)
-    - 创建方式：选择模板创建或自定义创建开发您所需的功能。
-    - 模糊搜索：选择 workflow。
+如需新增函数，单击“新增函数”，按照页面提示进行配置即可。
 6. 确认配置无误，单击**确定**。
-
-
-
