--- a/product/数据库/云数据库MongoDB/常见问题/功能特性问题.md
+++ b/product/数据库/云数据库MongoDB/常见问题/功能特性问题.md
@@ -3,7 +3,7 @@
 可使用 [慢日志](https://cloud.tencent.com/document/product/240/30923) 查询功能获取慢查询详情。
 
 ### MongoDB 是否支持无密码访问？
-基于安全原因，MongoDB 不支持无密码访问。
+云数据库 MongoDB 支持开启 [免认证访问实例](https://cloud.tencent.com/document/product/240/49887) 的功能，帮助您快速连接访问数据库。免认证可以高效快速访问数据库实例，但也相应存在安全风险，请您仔细评估是否开启免认证访问数据库的功能。
 
 ### 如何设置从库 dump？
 在 mongodump 的参数中设置 readPreference=secondaryPreferred。
