--- a/product/移动与通信/云开发低代码平台/操作指南/组件/官方组件库/组件样式配置说明.md
+++ b/product/移动与通信/云开发低代码平台/操作指南/组件/官方组件库/组件样式配置说明.md
@@ -105,122 +105,133 @@
 
 ### 边框
 
-使用场景：需要调整组件的边框粗细、颜色、圆角样式时可通过边框进行修改
+需要调整组件的边框粗细、颜色、圆角样式时可通过边框进行修改。
 
-- **类型**：无边框、虚线边框、实线边框，选择组件之后默认边框类型为无边框。注：无边框不是没有边框，是组件的初始边框样式。选择边框为虚线或者实线之后，需要设置边框宽度边框才会生效
-- **颜色**：可点击选择边框颜色
-- **宽度**：可以手动输入数字设置边框宽度
-- **圆角**：可以手动输入数字设置边框的圆角弧度，四个圆角默认关联（即配置一个圆角之后其他三个圆角弧度数值默认都相同），若要配置独立圆角，需点击圆角配置中间的关联图标取消圆角关联
+- **类型**：无边框、虚线边框、实线边框，选择组件之后默认边框类型为无边框。注意：无边框不是没有边框，是组件的初始边框样式。选择边框为虚线或者实线之后，需要设置边框宽度边框才会生效。
+- **颜色**：可单击选择边框颜色。
+- **宽度**：可以手动输入数字设置边框宽度。
+- **圆角**：可以手动输入数字设置边框的圆角弧度，四个圆角默认关联（即配置一个圆角之后其他三个圆角弧度数值默认都相同），若要配置独立圆角，需单击圆角配置中间的关联图标取消圆角关联。
 
 ### 自定义
 
-1. 使用场景：classname选择/classname绑定-需要定义整个应用级别或者页面级别的某些通用样式，整个应用或者页面的所有组件都可以快捷选择该样式；style绑定-需要快捷的通过样式表达式定义样式，或者组件样式通过事件进行修改时，可使用style绑定，组件样式通过事件修改实例可参考[使用事件修改组件样式](https://cloud.tencent.com/document/product/1301/70385)
-**Style绑定**：可以通过style直接绑定表达式的方式进行样式配置，提供示例如下：
- - 先添加一个组件，选中该组件后点击style绑定
+**classname 选择**或 **classname 绑定**，需要定义整个应用级别或者页面级别的某些通用样式，整个应用或者页面的所有组件都可以快捷选择该样式；**style 绑定**需要快捷的通过样式表达式定义样式，或者组件样式通过事件进行修改时，可使用 **style 绑定**，组件样式通过事件修改实例可参见 [使用事件修改组件样式](https://cloud.tencent.com/document/product/1301/70385)。
+- **style 绑定**：可以通过 style 直接绑定表达式的方式进行样式配置，提供示例如下：
+ 1. 先添加一个组件，选中该组件后单击 style 绑定。
    ![](https://qcloudimg.tencent-cloud.cn/raw/98dee80c9338782194ac238db4efbcc4.png)
- - 绑定数据-表达式中输入颜色和背景的对象代码（注意：style仅支持绑定对象）
+ 2. 绑定数据-表达式中输入颜色和背景的对象代码（注意：style 仅支持绑定对象）。
+<dx-codeblock>
+:::  css
    {color:"red",background:"blue"}
-     ![](https://qcloudimg.tencent-cloud.cn/raw/f0a3ded7c28b97ebed0cad631e03c5fe.png)
- - 点击绑定按钮，可以看到组件文本变为红色，背景变为蓝色
+:::
+</dx-codeblock>
+<img src = "https://qcloudimg.tencent-cloud.cn/raw/f0a3ded7c28b97ebed0cad631e03c5fe.png">
+ 3. 单击绑定按钮，可以看到组件文本变为红色，背景变为蓝色。
    ![](https://qcloudimg.tencent-cloud.cn/raw/671441191543f9e15bfaa98743c51750.png)
-    **Classname**：可以直接关联定义好的classname参数进行样式配置，提供示例如下：
- - 首先打开低代码编辑器（应用编辑页面右上角 按钮），于页面-style中定义样式classname参数（字号50px，行高200px）--单个页面style中classname参数适用于当前页面，只有该页面中组件设定classname时可以选择；全局style中classame参数适用于所有页面，所有页面组件设定classname时都可以选择
-
-```
+- **Classname**：可以直接关联定义好的 classname 参数进行样式配置，提供示例如下：
+ 1. 单击应用编辑页面**右上角按钮**进入**低代码编辑器**。
+![](https://qcloudimg.tencent-cloud.cn/raw/54210398d7c324c1838d709eca7bb11b.png)
+ 2. 进入 style 页面，定义样式 classname 参数（字号50px，行高200px）。
+<img src = "https://qcloudimg.tencent-cloud.cn/raw/86ce4f1a4830eb75528415d79d6bca9c.png">
+<dx-codeblock>
+:::  css
 .button-font-size {
     font-size: 50px;
 }
 .button-line-height {
     line-height: 200px;
 }
-```
-
-![](https://qcloudimg.tencent-cloud.cn/raw/86ce4f1a4830eb75528415d79d6bca9c.png)
-
- - 添加一个组件，选中该组件后进行classname参数选择，classname支持多选（点击classname下面的选择/输入框可以看到低代码编辑-页面-style中预先配置的两个classname参数）
+:::
+</dx-codeblock><ul>
+<li>单个页面 style：classname 参数适用于当前页面，只有该页面中组件设定 classname 时可以选择。</li>
+<li>全局 style：classame 参数适用于所有页面，所有页面组件设定 classname 时都可以选择。</li></ul>
+ 3. 添加一个组件，选中该组件后进行 classname 参数选择，classname 支持多选（单击 classname 下面的选择/输入框可以看到低代码编辑-页面-style中预先配置的两个classname参数）。
    ![](https://qcloudimg.tencent-cloud.cn/raw/5b1a68c22887a6ca7e897841d3f360d1.png)
- - 分别勾选两个classname参数，可以看到按钮组件字号变为50px，行高变为200px
+ 4. 分别勾选两个 classname 参数，可以看到按钮组件字号变为50px，行高变为200px
    ![](https://qcloudimg.tencent-cloud.cn/raw/e84b573d8d4533705c9e8a9e17c53dda.png)
-   **Classname绑定**：可以通过classname绑定表达式的方式进行样式配置，提供示例如下：
- - 首先打开低代码编辑器（应用编辑页面右上角 按钮），于页面-style中定义样式classname参数（字号50px，行高200px）
-
-```
+-  **Classname 绑定**：可以通过 classname 绑定表达式的方式进行样式配置，提供示例如下：
+ 1. 单击应用编辑页面**右上角按钮**进入**低代码编辑器**。
+![](https://qcloudimg.tencent-cloud.cn/raw/54210398d7c324c1838d709eca7bb11b.png)
+ 2. 进入 style 页面，定义样式 classname 参数（字号50px，行高200px）。
+![](https://qcloudimg.tencent-cloud.cn/raw/4feefc6d5e7d8fb48c01df1262aec87d.png)
+<dx-codeblock>
+:::  css
 .button-font-size {
     font-size: 50px;
 }
 .button-line-height {
     line-height: 200px;
 }
-```
-
-![](https://qcloudimg.tencent-cloud.cn/raw/4feefc6d5e7d8fb48c01df1262aec87d.png)
-
- - 添加一个组件，选中该组件后点击classname绑定
+:::
+</dx-codeblock>
+ 3. 添加一个组件，选中该组件后单击 classname 绑定。
    ![](https://qcloudimg.tencent-cloud.cn/raw/1c42e68cc5c722a5a42b3c97790ca479.png)
- - 绑定数据-表达式中绑定刚刚于低代码编辑器-页面style中定义的classname参数
-   "button-font-size button-line-height"
+ 4. 进入**绑定数据**页面，在**表达式**中绑定刚刚于**低代码编辑器** > **style** 页面中定义的 classname 参数 `button-font-size button-line-height`。
    ![](https://qcloudimg.tencent-cloud.cn/raw/37b8797477068ad7b40565c89ab6f07b.png)
- - 点击绑定按钮，可以看到组件字号变为50px，行高变为200px
+ 5. 单击绑定按钮，可以看到组件字号变为50px，行高变为200px。
    ![](https://qcloudimg.tencent-cloud.cn/raw/5648e2daf3834ec594cf54bccf4ebca1.png)
 
 ### 样式代码编辑器
 
-1. 使用场景：当部分样式在样式编辑面板中无法满足需要时，可通过样式代码编辑器编写样式代码来定义样式
-2. 代码编辑器和样式编辑面板是完全同步更改的，编辑之后即刻生效，两边同步修改
-3. 页面中添加一个文本组件，没有通过样式编辑面板进行编辑，此时点击样式代码编辑按钮可以看到内容为空：
-![](https://qcloudimg.tencent-cloud.cn/raw/f264e42ffebbf84ada61cc6aba9ff3fc.png)
- - 可以先通过样式编辑面板配置字重为粗，背景为浅绿，组件边框设定为虚线、红色、宽度为10，此时点击样式代码编辑按钮可以看到关于关于组件字重、背景和边框配置代码也已实时同步到样式代码编辑中
+当部分样式在样式编辑面板中无法满足需要时，可通过样式代码编辑器编写样式代码来定义样式。
+>?代码编辑器和样式编辑面板是完全同步更改的，编辑之后即刻生效，两边同步修改。
 
-```
+
+#### 示例
+
+1. 页面中添加一个**单行输入**组件，没有通过样式编辑面板进行编辑，此时单击样式代码编辑按钮可以看到内容为空。
+![](https://qcloudimg.tencent-cloud.cn/raw/f264e42ffebbf84ada61cc6aba9ff3fc.png)
+2. 通过在**样式代码编辑**下，输入以下代码，配置字重为粗，背景为浅绿，组件边框设定为虚线、红色、宽度为10。
+<dx-codeblock>
+:::  css
 font-weight: bolder;
 border: 10px dashed rgb(224, 68, 68);
 background: rgb(181, 247, 151)
-```
-
+:::
+</dx-codeblock>
+3. 单击**保存 CRTL+S**，关于组件**字体**、**背景**和**边框**配置，已实时同步到样式当中。
 ![](https://qcloudimg.tencent-cloud.cn/raw/c200ec0a5ef17f32ca36f97be71dac50.png)
+4. 此时我们看到样式编辑面板中虚线默认的是短的方形虚线，如果我们想要圆点虚线，通过样式编辑面板基础功能无法配置。可继续通过修改样式代码编辑中的代码来实现我们的诉求，border（边框设定）中 dashed 修改为 dotted，单击**保存 CRTL+S**。
+   - dashed：显示为一系列短的方形虚线。
+   - dotted：显示为一系列圆点虚线。
+<dx-alert infotype="notice" title="">
+自定义的边框类型，默认样式中不做同步显示。
+</dx-alert>
+可以看到组件的边框方形虚线已经变为圆点虚线。
+<img src = "https://qcloudimg.tencent-cloud.cn/raw/81cafb8b7fcf4604924c5eacec34dec5.png">
 
- - 此时我们看到样式编辑面板中虚线默认的是短的方形虚线，如果我们想要圆点虚线，通过样式编辑面板基础功能无法配置，此时我们通过修改样式代码编辑中的代码来实现我们的诉求，border（边框设定）中dashed修改为dotted，点击保存，可以看到组件的边框方形虚线已经变为圆点虚线。  注意：此时我们观察样式编辑面板中边框类型没有选择，因为我们自定义的边框类型，默认样式中没有所以不做同步显示
-   - dashed：显示为一系列短的方形虚线
-   - dotted：显示为一系列圆点虚线
-
-```
-font-weight: bolder;
-border: 10px dotted rgb(224, 68, 68);
-background: rgb(181, 247, 151)
-```
-
-![](https://qcloudimg.tencent-cloud.cn/raw/b5ef24a96d1d35c62f82670991caea4b.png)
 
 ## 操作示例
 
-1. 以下为具体的一个样式配置的操作示例（以一个商城的首页为例）：
-2. 首先我们新建一个门户应用，选择从空白新建，首页空白页我们添加顶部导航、底部 tab 栏、轮播图和宫格导航：
+以下为具体的一个样式配置的操作示例（以一个商城的首页为例）：
+1. 首先我们新建一个门户应用，选择从空白新建，首页空白页我们添加顶部导航、底部 tab 栏、轮播图和宫格导航。
 ![](https://qcloudimg.tencent-cloud.cn/raw/60cbc4236f17887788f3627d6ee33f87.png)
- - 此时我们想要一个悬浮的客服图标固定在首页（首页上下滑动图标固定不动）在宫格导航下面添加一个图片组件，点击从素材库选择我们上传的客服图标素材：
+2. 此时我们想要一个悬浮的客服图标固定在首页（首页上下滑动图标固定不动）在宫格导航下面添加一个图片组件，单击从素材库选择我们上传的客服图标素材。
    ![](https://qcloudimg.tencent-cloud.cn/raw/28afe9fc315110353176bc4c6166263e.png)
- - 图片我们需要其靠右、宽和高都为100px、固定于页面中，可与布局设定左侧外边距600、宽100高100，定位选择固定，显示效果如下图：
+3. 图片我们需要其靠右、宽和高都为100px、固定于页面中，可与布局设定左侧外边距600、宽100高100，定位选择固定，显示效果如下图：
    ![](https://qcloudimg.tencent-cloud.cn/raw/d61afe12ae091b478ffa2ca92cb9a5a4.png)
- - 之后我们添加图文卡片组件进行推荐商品介绍和展示，想要调整图文列表组件背景为浅黄色、边框为深黄色，我们可以通过如下的背景和边框进行配置，显示效果如下图（此时我们也可以看到之前设定的客服图标悬浮固定于页面之上的效果）：
+4. 之后我们添加图文卡片组件进行推荐商品介绍和展示，想要调整图文列表组件背景为浅黄色、边框为深黄色，我们可以通过如下的背景和边框进行配置，显示效果如下图（此时我们也可以看到之前设定的客服图标悬浮固定于页面之上的效果）：
    ![](https://qcloudimg.tencent-cloud.cn/raw/a39817150fb7dcb9e173519fb6daab44.png)
- - 图文卡片下面我们添加一个普通容器，普通容器中加入两个文本和一个图片组件：
+5. 图文卡片下面我们添加一个普通容器，普通容器中加入两个文本和一个图片组件。
    ![](https://qcloudimg.tencent-cloud.cn/raw/938af50afe7775f74e23b6555e28aa42.png)
- - 需要两个文本并列显示，横向平分，图标居中在容器的上方不占用容器空间（悬浮于容器之上），两个文本配置相同的背景文字颜色和虚线边框（此处我们使用classname，设定多个通用属性的组件样式通过classname比较快捷）：
- - 首先通过低代码编辑器-style设定通用classname属性：
-   ![](https://qcloudimg.tencent-cloud.cn/raw/5756fc307c1d341912adfbc24793f2c1.png)
- - 选中容器组件，容器组件设定相对定位，容器选择弹性布局，主轴对齐方式设定横向平分；图片组件设定绝对定位（子绝父相）；分别选中文本组件，选择上面设定的classname，显示效果参考下图：
-   ![](https://qcloudimg.tencent-cloud.cn/raw/b3005f856c4a0db61e8462f98c284e5c.png)
-     ![](https://qcloudimg.tencent-cloud.cn/raw/7effbbf6ae0c5cd429bdad88730d685d.png)
-     ![](https://qcloudimg.tencent-cloud.cn/raw/a41b7def927237e60c0a94e996c1196d.png)
- - 同时我们可以通过样式代码编辑器直接进行组件样式的编辑，比如我们感觉固定的客服图标太小了，我们可以选中客服图片组件，点击样式-样式代码编辑器，修改width为150，height为150，效果如下：
+6. 需要两个文本并列显示，横向平分，图标居中在容器的上方不占用容器空间（悬浮于容器之上），两个文本配置相同的背景文字颜色和虚线边框（此处我们使用 classname，设定多个通用属性的组件样式通过 classname 比较快捷）：
+ 1. 首先通过**低代码编辑器** > **style** 页面设定通用 classname 属性：
+![](https://qcloudimg.tencent-cloud.cn/raw/5756fc307c1d341912adfbc24793f2c1.png)
+ 2. 选中**普通容器**组件，容器组件设定**相对**定位，容器选择**弹性布局**，主轴对齐方式设定**横向平分**
+![](https://qcloudimg.tencent-cloud.cn/raw/b3005f856c4a0db61e8462f98c284e5c.png)
+ 3. 选中**图片**组件，设定**绝对**定位（子绝父相）。
+![](https://qcloudimg.tencent-cloud.cn/raw/7effbbf6ae0c5cd429bdad88730d685d.png)
+ 4. 分别选中**文本**组件，选择上面设定的 classname，显示效果如下图：
+![](https://qcloudimg.tencent-cloud.cn/raw/a41b7def927237e60c0a94e996c1196d.png)
+7. 同时我们可以通过样式代码编辑器直接进行组件样式的编辑，比如我们感觉固定的客服图标太小了，我们可以选中客服图片组件，单击**样式** > **样式代码编辑器**，修改 width 为150，height 为150，效果如下：
    ![](https://qcloudimg.tencent-cloud.cn/raw/7c5c5095ac8b28fd82a029df052ddb68.png)
- - 首页整体样式布局设置好之后我们可以通过配置跳转链接，或者添加其他组件等丰富首页内容
+8. 首页整体样式布局设置好之后我们可以通过配置跳转链接，或者添加其他组件等丰富首页内容。
 
 ## 常用布局样式
 ### 表单双列布局
 
-页面中有几个单行输入组件，每个单行输入组件都占用一行很浪费空间，此时我们可以通过配置表单的布局，实现几个表单横向均匀排列的效果:
+页面中有几个单行输入组件，每个单行输入组件都占用一行很浪费空间，此时我们可以通过配置表单的布局，实现几个表单横向均匀排列的效果：
 
-- 页面中添加一个表单容器，表单容器的内容插槽中添加六个单行输入组件，整体样式如下：
+1. 页面中添加一个**表单容器**组件，表单容器的内容插槽中添加六个单行输入组件，整体样式如下：
   ![](https://qcloudimg.tencent-cloud.cn/raw/559816dc028934ddb57500af84a8a7df.png)
  - 选中表单容器，布局选择弹性布局，换行选择正换行，效果如下：
    ![](https://qcloudimg.tencent-cloud.cn/raw/76fb6b574e9e477ca64057df9b161d61.png)
@@ -268,7 +279,7 @@ background: rgb(181, 247, 151)
    ![](https://qcloudimg.tencent-cloud.cn/raw/3462e6ed20f75ca3d24e5731c933b9cf.png)
  - 之后我们选中普通容器，设定普通容器的布局为弹性布局，主轴方向为水平，主轴对齐选择横向平分，换行选择正换行，整体效果如下图：（此处不选正换行效果也一样，组件过多一行容不下时，正换行可以保证组件上下换行分布的效果）
    ![](https://qcloudimg.tencent-cloud.cn/raw/67b549e24ecbfa44276974a1d1b4b2a5.png)
- - 操作技巧：我们配置了一个文本样式之后，其他文本组件也想要配置同样的样式，如何快速操作？当然我们可以复制粘贴或者通过配置通用style-classname的方式，如果我们只想参照样式，使用复制粘贴不太好，我们也可以通过样式代码编辑器快速配置相同的样式，配置了一个文本A的样式之后，我们打开A的样式代码编辑器，复制代码，选中文本组件B，打开B的样式代码编辑器，复制代码到编辑器，点击保存即可，此处提供一种样式复制的思路供参考
+ - 操作技巧：我们配置了一个文本样式之后，其他文本组件也想要配置同样的样式，如何快速操作？当然我们可以复制粘贴或者通过配置通用style-classname的方式，如果我们只想参照样式，使用复制粘贴不太好，我们也可以通过样式代码编辑器快速配置相同的样式，配置了一个文本A的样式之后，我们打开A的样式代码编辑器，复制代码，选中文本组件B，打开B的样式代码编辑器，复制代码到编辑器，单击保存即可，此处提供一种样式复制的思路供参考
 
 ### 双列图文布局
 
