--- a/product/存储与CDN/安全加速/购买指南/安全防护包计费说明.md
+++ b/product/存储与CDN/安全加速/购买指南/安全防护包计费说明.md
@@ -4,17 +4,83 @@
 
 **一次性购买**
 
-| 规格 ｜有效期 |  100GB  |  500GB  |   1TB   |  5TB   |  10TB  |  50TB   |  200TB  |   1PB    |
-| :------------ | :-----: | :-----: | :-----: | :----: | :----: | :-----: | :-----: | :------: |
-| 1个月         | ¥ 36.10 | ¥ 182.4 | ¥ 364.8 | ¥ 1692 | ¥ 3008 | ¥ 12420 | ¥ 36000 | ¥ 180000 |
-| 12个月        | ¥39.90  |  ¥204   |  ¥410   | ¥1,861 | ¥3,308 | ¥13,369 | ¥37,908 | ¥189,540 |
+<table style="width:760px;">
+    <caption></caption>
+    <tr>
+        <th style ="width:95px;height:45px;position:relative;text-align:left;padding:5px 7px;font-weight:700;" valign="top" ><div style="position:absolute;width:1px;height:106px;top:0;left:0;background-color: #d9d9d9;display:block;transform:rotate(-61deg);transform-origin:top;valign=top;"></div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;规格<br>有效期</th>
+        <th style="width:80px;padding:0;text-align:center;font-weight:700;">100GB</th>
+        <th style="width:80px;padding:0;text-align:center;font-weight:700;">500GB</th>
+        <th style="width:80px;padding:0;text-align:center;font-weight:700;">1TB</th>
+        <th style="width:80px;padding:0;text-align:center;font-weight:700;">5TB</th>
+ <th style="width:80px;padding:0;text-align:center;font-weight:700;">10TB</th>
+ <th style="width:90px;padding:0;text-align:center;font-weight:700;">50TB</th>
+ <th style="width:95px;padding:0;text-align:center;font-weight:700;">200TB</th>
+ <th style="width:95px;padding:0;text-align:center;font-weight:700;">1PB</th>
+    </tr>
+</thead>
+<tbody><tr>
+<td align="left">1个月</td>
+<td align="center">¥ 36.10</td>
+<td align="center">¥ 182.4</td>
+<td align="center">¥ 364.8</td>
+<td align="center">¥ 1692</td>
+<td align="center">¥ 3008</td>
+<td align="center">¥ 12420</td>
+<td align="center">¥ 36000</td>
+<td align="center">¥ 180000</td>
+</tr>
+<tr>
+<td align="left">12个月</td>
+<td align="center">¥ 39.90</td>
+<td align="center">¥ 204</td>
+<td align="center">¥ 410</td>
+<td align="center">¥ 1861</td>
+<td align="center">¥ 3308</td>
+<td align="center">¥ 13369</td>
+<td align="center">¥ 37908</td>
+<td align="center">¥ 189540</td>
+</tr>
+</tbody></table>
 
 **用尽续订**
 
-| 用尽续订｜ 有效期 |  100GB  |  500GB   |   1TB    |  5TB   |  10TB  |  50TB   |  200TB  |   1PB    |
-| :---------------- | :-----: | :------: | :------: | :----: | :----: | :-----: | :-----: | :------: |
-| 1个月             | ¥ 34.58 | ¥ 172.90 | ¥ 345.80 | ¥ 1602 | ¥ 2848 | ¥ 11745 | ¥ 34400 | ¥ 34400  |
-| 12个月            | ¥38.22  | ¥193.83  | ¥388.57  | ¥1,762 | ¥3,132 | ¥12,642 | ¥36,223 | ¥181,116 |
+<table style="width:770px;">
+    <caption></caption>
+    <tr>
+        <th style ="width:95px;height:45px;position:relative;text-align:left;padding:5px 7px;font-weight:700;" valign="top" ><div style="position:absolute;width:1px;height:106px;top:0;left:0;background-color: #d9d9d9;display:block;transform:rotate(-61deg);transform-origin:top;valign=top;"></div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;规格<br>有效期</th>
+        <th style="width:80px;padding:0;text-align:center;font-weight:700;">100GB</th>
+        <th style="width:90px;padding:0;text-align:center;font-weight:700;">500GB</th>
+        <th style="width:90px;padding:0;text-align:center;font-weight:700;">1TB</th>
+        <th style="width:80px;padding:0;text-align:center;font-weight:700;">5TB</th>
+ <th style="width:80px;padding:0;text-align:center;font-weight:700;">10TB</th>
+ <th style="width:90px;padding:0;text-align:center;font-weight:700;">50TB</th>
+ <th style="width:95px;padding:0;text-align:center;font-weight:700;">200TB</th>
+ <th style="width:95px;padding:0;text-align:center;font-weight:700;">1PB</th>
+    </tr>
+</thead>
+<tbody><tr>
+<td align="left">1个月</td>
+<td align="center">¥ 34.58</td>
+<td align="center">¥ 172.90</td>
+<td align="center">¥ 345.80</td>
+<td align="center">¥ 1602</td>
+<td align="center">¥ 2848</td>
+<td align="center">¥ 11745</td>
+<td align="center">¥ 34400</td>
+<td align="center">¥ 34400</td>
+</tr>
+<tr>
+<td align="left">12个月</td>
+<td align="center">¥ 38.22</td>
+<td align="center">¥ 193.83</td>
+<td align="center">¥ 388.57</td>
+<td align="center">¥ 1762</td>
+<td align="center">¥ 3132</td>
+<td align="center">¥ 12642</td>
+<td align="center">¥ 36223</td>
+<td align="center">¥ 181116</td>
+</tr>
+</tbody></table>
 
 **续订说明**
 
