--- a/product/存储与CDN/内容分发网络/快速入门/域名归属权验证.md
+++ b/product/存储与CDN/内容分发网络/快速入门/域名归属权验证.md
@@ -4,8 +4,8 @@
 - 该域名已被其他用户接入
 - 接入域名为泛域名
 
-## 操作步骤
-### DNS 解析认证
+
+## DNS 解析认证操作步骤
 
 1. 单击**验证方法**，获取 DNS 验证所需要的解析记录信息，在验证完成前保持页面打开。
 ![img](https://main.qcloudimg.com/raw/88ab16a015045bb7f27d473b2306b4f7.png)
@@ -14,7 +14,7 @@
 3. 等待 TXT 解析生效，单击**验证**按钮进行验证。
 ![img](https://main.qcloudimg.com/raw/97385b1041580f819b6d5e10902f0a99.png)
 
-### 文件验证操作步骤
+## 文件验证操作步骤
 
 1. 单击**验证方法**，选择**文件验证**，在验证完成前保持页面打开。
 2. 单击**verification.html**，下载该验证文件。
@@ -23,7 +23,7 @@
 4. 单击**验证**，若该访问 URL 链接访问到的文件内容是否与我们的记录值一致，则验证通过。
 
 
-### API 操作步骤
+## API 操作步骤
 
 1. 首先，调用[CreateVerifyRecord](https://cloud.tencent.com/document/product/228/48118)接口，生成一条针对该接入域名的TXT解析记录。
 ```
