Update and rename 域名归属权验证1.md to 域名归属权验证.md

--- a/product/存储与CDN/内容分发网络/快速入门/域名归属权验证.md
+++ b/product/存储与CDN/内容分发网络/快速入门/域名归属权验证.md
@@ -5,7 +5,7 @@
 - 接入域名为泛域名
 
 
-## DNS 解析认证操作步骤
+## DNS 解析验证操作步骤
 
 1. 单击**验证方法**，获取 DNS 验证所需要的解析记录信息，在验证完成前保持页面打开。
 ![img](https://main.qcloudimg.com/raw/88ab16a015045bb7f27d473b2306b4f7.png)
