--- a/product/移动与通信/云开发低代码平台/操作指南/组件/官方组件库/组件样式配置说明.md
+++ b/product/移动与通信/云开发低代码平台/操作指南/组件/官方组件库/组件样式配置说明.md
@@ -290,7 +290,7 @@ background: rgb(181, 247, 151)
 ### 双列图文布局
 
 小程序或者 H5 段想要展示内容时会用到比较多的双列图文展示，如下图。需要配置双列图文布局时可以参考以下的配置步骤：
-<img src = "https://qcloudimg.tencent-cloud.cn/raw/c5d56c1cacfd025122597fc978069a6f.png" style = "width:80%">
+<img src = "https://qcloudimg.tencent-cloud.cn/raw/c5d56c1cacfd025122597fc978069a6f.png" style = "width:60%"> 
 
 1. 首先搭建基础框架，页面中添加一个**普通容器**组件当**父容器**，在**父容器**中再添加四个**普通容器**组件作**子容器**。其中**子容器**灵活设定一个想要的宽高和边距，背景设定为白色，圆角设定为50。
 ![](https://qcloudimg.tencent-cloud.cn/raw/2699d274fc223aaef82663191f996383.png)
@@ -298,13 +298,12 @@ background: rgb(181, 247, 151)
 ![](https://qcloudimg.tencent-cloud.cn/raw/c0b5d1330140b0a0a30e6d5e0635e351.png)
 2. 第一个**子容器**中加入一个**图片**组件、两个**文本**组件、一个**迷你按钮**组件。
 ![](https://qcloudimg.tencent-cloud.cn/raw/f9ebe8ffb05ad50ff047bb28ac2e5d94.png)
-3. 子容器的**布局**选择**弹性布局**，**主轴对齐**选择**横向平分**，**定位**设定为**相对定位**。
+3. 子容器的**布局**选择**弹性布局**，**定位**设定为**相对定位**，**主轴对齐**选择**横向平分**让图片居中展示（因为文本和按钮都为绝对定位，所以主轴对齐方式对文本和按钮不生效）。
 ![](https://qcloudimg.tencent-cloud.cn/raw/dcf10d0b8f0f5bd01a2943700c83e53c.png)
-**图片**组件调整上边外边距为15，两个**文本**组件和**按钮**组件都设定为**绝对定位**，位置配置参数信息可根据需要组件在子容器的位置灵活定义，子容器设定为弹性布局，主轴对齐横向平分让图片居中展示（因为文本和按钮都为绝对定位，所以主轴对齐方式对文本和按钮不生效），再配置下文本的内容和颜色字体，一个子容器的内容配置完成：
-   ![](https://qcloudimg.tencent-cloud.cn/raw/dcf10d0b8f0f5bd01a2943700c83e53c.png)
-     ![](https://qcloudimg.tencent-cloud.cn/raw/a561f0672495ba5230ed2a86ae276149.png)
-     ![](https://qcloudimg.tencent-cloud.cn/raw/2dd3e3d7679400081dac4abafda7422a.png)
-     ![](https://qcloudimg.tencent-cloud.cn/raw/957cf34485554dc7394047b660aa2016.png)
-4. 配置好一个子容器之后可以通过复制功能复制子容器（选中子容器，右键复制），然后粘贴三份相同的内容（选中父容器，右键粘贴），后续只需替换图片和文本的文字内容即可
+**图片**组件调整上边外边距为15，两个**文本**组件和**按钮**组件都设定为**绝对定位**，位置配置参数信息可根据需要组件在子容器的位置灵活定义。
+![](https://qcloudimg.tencent-cloud.cn/raw/a561f0672495ba5230ed2a86ae276149.png)
+再配置下文本的内容和颜色字体，一个子容器的内容配置完成。
+![](https://qcloudimg.tencent-cloud.cn/raw/2dd3e3d7679400081dac4abafda7422a.png)
+4. 配置好一个子容器之后可以通过复制功能复制子容器（选中子容器，右键复制），然后粘贴三份相同的内容（选中父容器，右键粘贴），后续只需替换图片和文本的文字内容即可。
 ![](https://qcloudimg.tencent-cloud.cn/raw/df5bfce6413d2366a4908639d9400aa7.png)
 
