--- a/product/移动与通信/云开发低代码平台/操作指南/组件/官方组件库/组件样式配置说明.md
+++ b/product/移动与通信/云开发低代码平台/操作指南/组件/官方组件库/组件样式配置说明.md
@@ -222,7 +222,7 @@ background: rgb(181, 247, 151)
 ![](https://qcloudimg.tencent-cloud.cn/raw/7effbbf6ae0c5cd429bdad88730d685d.png)
  4. 分别选中**文本**组件，选择上面设定的 classname，显示效果如下图：
 ![](https://qcloudimg.tencent-cloud.cn/raw/ed37f619f659b210bd736ceaa529759f.png)
-7. 同时可以通过样式代码编辑器直接进行组件样式的编辑，比如感觉固定的客服图标太小了，可以选中客服图片组件，单击**样式** > **样式代码编辑器**，修改 width 为150，height 为150，效果如下：
+7. 同时可以通过样式代码编辑器直接进行组件样式的编辑，例如感觉固定的客服图标太小了，可以选中客服图片组件，单击**样式** > **样式代码编辑器**，修改 width 为150，height 为150，效果如下：
    ![](https://qcloudimg.tencent-cloud.cn/raw/7c5c5095ac8b28fd82a029df052ddb68.png)
 8. 首页整体样式布局设置好之后可以通过配置跳转链接，或者添加其他组件等丰富首页内容。
 
