--- a/product/安全服务/容器安全服务/操作指南/集群安全/接入自建集群.md
+++ b/product/安全服务/容器安全服务/操作指南/集群安全/接入自建集群.md
@@ -1,14 +1,11 @@
 ## 接入自建集群
 本文介绍接入自建集群的步骤，您可以将自建集群接入容器安全服务进行统一管理，对自建集群开展集群风险检查和管理。
 
-### 限制条件
+## 限制条件
 接入自建集群节点规模小于500。
 
-### 前提条件
-公网方式接入自建集群，如果您的集群有**设置访问控制策略**，需添加以下 IP 地址白名单：
 
-
-### 操作步骤
+## 操作步骤
 1. 登录 [容器安全服务控制台](https://console.cloud.tencent.com/tcss)，在左侧导航中，单击**集群安全** > **集群检查**。
 2. 在集群检查页面，单击**接入自建集群**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/2f78b6e2cf3a07b496caee37de4231e3.png)
@@ -74,11 +71,12 @@
 </tr>
 </tbody></table>
 4. 在上传配置文件，单击**选择文件**，上传本地文件后，单击**完成接入**即可接入自建集群。
->?
+>!
+>- 公网方式接入自建集群，如果您的集群有**设置访问控制策略**，需单击 **IP白名单地址**添加页面中的 IP 地址。
 >- 您需要在服务器上生成K8s配置文件后，才能上传该配置文件。生成K8s配置文件的具体操作，请参见 [生成 K8S 配置文件](#K8s)。
 >- 上传配置文件，大小需要在 1M 以内。
 >
-![](https://qcloudimg.tencent-cloud.cn/raw/bb14636c1aac6581aa58624055519ba0.png)
+![](https://qcloudimg.tencent-cloud.cn/raw/9ead9e2a23ce1032c36f53cb69a5a606.png)
 
 ## 生成 K8s 配置文件[](id:K8s)
 本文指导您生成容器安全需要的最小化权限 K8s 配置文件。您可参照文档步骤生成配置文件，或者参见 [一键脚本](#yjjb)。
@@ -213,7 +211,9 @@ KUBECONFIG=/root/tcss.conf kubectl -n tcss get pod
 >?执行上述命令，如果能显示 pod 或者显示当前命名空间下没有相关资源则表示该集群配置是可用的，上传该文件 /root/tcss.conf 即可。
 
 ### 一健脚本[](id:yjjb)
-您可基于以下一键脚本代码一键快速生成集群配置文件：
+在在 mater 节点中，您可基于以下一键脚本代码一键快速生成集群配置文件：
+>?环境需要提前安装 openssl。
+>
 ```
 #!/bin/bash
 
@@ -222,7 +222,7 @@ set -e;
 # API_SERVER 需要设置为公网可访问的地址和端口
 # API_SERVER=https://xx.xx.xx.xx
 
-
+# 以下路径,用户根据集群实际情况设定
 KUBECONFIG_TARGET=/root/tcss.conf
 CA_FILE=/etc/kubernetes/ca.crt
 CAKEY_FILE=/etc/kubernetes/ca.key
@@ -242,11 +242,11 @@ if [ ! -f "$CA_FILE" ]; then
     exit 1;
 fi
 if [ ! -f "$CAKEY_FILE" ]; then
-    echo "$CA_FILE does not exist.";
+    echo "$CAKEY_FILE does not exist.";
     exit 1;
 fi
 if [ ! -d $TCSS_TMPDIR ]; then
-    mkdir $TCSS_TMPDIR;
+    mkdir -p $TCSS_TMPDIR;
 fi
 
 cat <<EOF  > $TCSS_TMPDIR/tcss_res.yaml
