--- a/product/安全服务/容器安全服务/操作指南/集群安全/接入自建集群.md
+++ b/product/安全服务/容器安全服务/操作指南/集群安全/接入自建集群.md
@@ -1,11 +1,11 @@
 ## 接入自建集群
 本文介绍接入自建集群的步骤，您可以将自建集群接入容器安全服务进行统一管理，对自建集群开展集群风险检查和管理。
 
-## 限制条件
+### 限制条件
 接入自建集群节点规模小于500。
 
 
-## 操作步骤
+### 操作步骤
 1. 登录 [容器安全服务控制台](https://console.cloud.tencent.com/tcss)，在左侧导航中，单击**集群安全** > **集群检查**。
 2. 在集群检查页面，单击**接入自建集群**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/2f78b6e2cf3a07b496caee37de4231e3.png)
