--- a/product/监控与管理/云监控/最佳实践/批量资源监控场景（云服务器）.md
+++ b/product/监控与管理/云监控/最佳实践/批量资源监控场景（云服务器）.md
@@ -70,7 +70,7 @@
 3. 链接跳转配置。
    Dashboard 为图表配置提供数据与图表两个位置的链接跳转，供用户配置多种个性化运维场景，如下图为**前端-基础 CPU 平均使用率**配置的两个使用场景：
    - 数据链接：Avg 视图，链接可从当前聚合图表跳转到对应的单机明细图表，快速分析与查看单机监控指标。
-   - 图表链接：一键拉群，链接可对与当前图表相关的运维人员实现一件拉群发布消息，高效协同运维以快速解决问题。
+   - 图表链接：一键拉群，链接可对与当前图表相关的运维人员实现一键拉群发布消息，高效协同运维以快速解决问题。
      ![](https://main.qcloudimg.com/raw/8c5a7d970128b424c79e592efbc9a09e.jpg)
 4. 配置完成，以上三点配置完成后可在 Dashboard 页面查看如下。
    ![](https://main.qcloudimg.com/raw/c48c12dc1e301d8a905a1ce733254ded.jpg)
