--- a/product/视频服务/点播/开发者指南/视频加密/1视频加密综述.md
+++ b/product/视频服务/点播/开发者指南/视频加密/1视频加密综述.md
@@ -35,4 +35,4 @@
 
 
 * [防盗链](https://cloud.tencent.com/document/product/266/11243)  主要用于控制视频播放请求来源的合法性，但防盗链不对视频内容加密，用户下载后可以二次分发，在版权保护上的安全级别不高。
-* 视频加密是一种使用密钥对内容本身加密的手段，他人获取后无法直接播放。只有当终端通过业务后台鉴权，获得解密密钥后才能播放。推荐使用 [HLS 私有加密]()，为视频内容提供更高安全级别的保障。
+* 视频加密是一种使用密钥对内容本身加密的手段，他人获取后无法直接播放。只有当终端通过业务后台鉴权，获得解密密钥后才能播放。推荐使用 [HLS 私有加密](https://cloud.tencent.com/document/product/266/73073)，为视频内容提供更高安全级别的保障。
