--- a/product/视频服务/点播/开发者指南/视频加密/1视频加密综述.md
+++ b/product/视频服务/点播/开发者指南/视频加密/1视频加密综述.md
@@ -21,7 +21,7 @@
 	<tr>
 	  <td rowspan="2">视频加密</td>
 	  <td>HLS 普通加密</td>
-		<td><li>基于 HLS 提供的 <a href=https://tools.ietf.org/html/draft-pantos-http-live-streaming-23?spm=a2c4g.11186623.2.31.409c6a6aYf9Rn8>AES encryption </a>通用方案</li><li>有部分浏览器插件和灰产工具能实现对该加密方式的破解</li><dx-alert infotype="explain" title="">
+		<td><li>基于 HLS 提供的 <a href=https://tools.ietf.org/html/draft-pantos-http-live-streaming-23?spm=a2c4g.11186623.2.31.409c6a6aYf9Rn8>AES encryption </a>通用方案</li><li>有部分浏览器插件和灰产工具能实现对该加密方式的破解</li><dx-alert infotype="notice" title="">
 因该加密方案方式的安全门槛较低，**已不再推荐使用**。
 </dx-alert></td>
 		<td>较高</td>
